Added automatic system to take the build folder crowding provides to push into our language files.
Former-commit-id: a0ffe484218a6d1ef783430d7e026dacaf5a53f5

--- a/assets/translations/ar.json
+++ b/assets/translations/ar.json
@@ -2,9 +2,7 @@
   "%{name}'s Address": "عنوان %{name}",
   "%{name}'s Nexus address": "عنوان Nexus %{name}",
   "%{smart_count} address |||| %{smart_count} addresses": "%{smart_count} عنوان |||| %{smart_count} عناوين",
-  "(Pending)": "(معلق)",
   "(This will restart your Core)": "(سيؤدي هذا إلى إعادة تشغيل النواة)",
-  "* - $ / & * | < >": "* - $ / & * | < >",
   "24hr Change": "تغيير يومي",
   "A contact with the same name already exists.": "هناك بالفعل اتصال بنفس الاسم.",
   "A module with the same directory name already exists": "وحدة بنفس المستودع موجودة مسبقا",
@@ -28,7 +26,6 @@
   "All Accounts": "كل الحسابات",
   "All modules without open source verifications, possibly including your own under-development modules, will become invalid. Wallet must be refreshed for the change to take effect.": "ستصبح جميع الوحدات دون التحقق من المصدر المفتوح، بما فيه وحداتك تحت التطوير، غير صالحة. يجب تحديث المحفظة حتى يسري التغيير.",
   "Amount": "مبلغ",
-  "Amount: ": "مبلغ: ",
   "An unknown error occurred": "حدث خطأ غير معروف",
   "Application": "تطبيق",
   "Are you sure you want to abort the process?": "هل تريد بالتأكيد إحباط العملية؟",
@@ -38,6 +35,7 @@
   "Auto Update is not yet available on Mac, please update the wallet manually for the time being": "تحديث تلقائي غير متاح حاليا لحاسبات Mac، برجاء قم بتحديث المحفظة يدويًا في الوقت الحاضر",
   "Auto update (Recommended)": "تحديث تلقائي (مستحسن)",
   "Automatically check for new versions and notify if a new version is available.": "تحقق تلقائيًا من وجود إصدارات جديدة و أشعرني إذا كان هناك إصدار جديد متاح.",
+  "Avatar Mode": null,
   "BACKUP OFTEN AND KEEP ENCRYPTION KEY SAFE.": "قم بنسخ احتياطي بشكل منتظم وحافظ على مفتاح التشفير آمنة.",
   "Background": "خلفية",
   "Background Color": "لون الخلفية",
@@ -48,9 +46,8 @@
   "Backup wallet": "نسخ المحفظة احتياطيا",
   "Balance": "رصيد",
   "Block Count": "عدد الكتل",
-  "Block Hash": "هاش الكتلة",
-  "Block Number": "‮رقم الكتلة",
   "Block Weight": "وزن الكتلة",
+  "Block hash": null,
   "Bootstrap Recent Database": "تمهيد قاعدة البيانات حديثة",
   "Bootstrap process has been aborted": "تم إحباط عملية التمهيد",
   "Browse": "تصفح",
@@ -61,6 +58,7 @@
   "Cannot find module": "لا يمكن العثور على الوحدة",
   "Cannot install from that location": "لا يمكن التثبيت من هذا الموقع",
   "Cannot move to the same account": "لا يمكن نقل إلى نفس الحساب",
+  "Category": null,
   "Change password": "غيّر كلمة المرور",
   "Check for Updates...": "تحقق من وجود تحديثات...",
   "Check wallet": "تحقق المحفظة",
@@ -79,6 +77,7 @@
   "Closing Nexus Wallet": "يتم إغلاق المحفظة",
   "Color scheme": "نظام الألوان",
   "Color scheme has been reset to default": "تمت إعادة تعيين نظام الألوان إلى الوضع الافتراضي",
+  "Confirm": null,
   "Confirm password": "تأكيد كلمة السر",
   "Confirmations": "تأكيدات",
   "Connecting to Nexus Core": "يتم الإتصال بالنواة",
@@ -93,6 +92,7 @@
   "Copy to clipboard": "نسخ إلى الحافظة",
   "Core": "نواة",
   "Core is in Manual Mode": "النواة في الوضع اليدوي",
+  "Core needs to restart for these settings to take effect!": null,
   "Core output": "ناتج النواة",
   "Core restarting": "النواة في إعادة التشغيل",
   "Core settings saved": "تم حفظ إعدادات النواة",
@@ -122,13 +122,13 @@
   "Developer mode": "وضع المُطوّر",
   "Development mode enables advanced features to aid in development. After enabling the wallet must be closed and reopened to enable those features.": "يتيح وضع التطوير ميزات متقدمة للمساعدة في التطوير. بعد تمكين يجب إغلاق المحفظة وإعادة فتحها لتمكين هذه الميزات.",
   "Disable %{moduleName}?": "تعطيل %{moduleName}؟",
+  "Disabling Avatar will make the core use a separate change key": null,
   "Dismiss": "رفض",
   "Display Test Transactions on the Transactions page": "عرض معاملات اختبار وهمية في صفحة المعاملات",
   "Display name": "عرض الاسم",
-  "Don't show this again": "لا تعرض هذا مجددًا",
-  "Download": "تحميل",
   "Download Recent Database": "تحميل قاعدة البيانات حديثية",
   "Download recent database?": "تحميل قاعدة البيانات حديثية؟",
+  "Download transactions history": null,
   "Downloading": "يتم التحميل",
   "Downloading a recent version of the database might reduce the time it takes to synchronize your wallet": "تحميل نسخة حديثة من قاعدة البيانات قد يقلل من الوقت اللازم لمزامنة محفظتك",
   "Downloading the database": "يتم تحميل قاعدة البيانات",
@@ -150,6 +150,7 @@
   "Enter console commands here (ex: getinfo, help)": "أدخل أوامر المحطة هنا (مثلاً: getinfo ، help)",
   "Enter manual Core mode?": "دخول الوضع اليدوي للنواة؟",
   "Enter your message": "أدخل رسالتك",
+  "Enter your wallet password": null,
   "Error bootstrapping recent database": "خطأ في تمهيد قاعدة البيانات الحديثة",
   "Error changing password": "خطأ في تغيير كلمة المرور",
   "Error copying module files": "خطأ في نسخ ملفات الوحدة",
@@ -182,15 +183,18 @@
   "Hash Difficulty": "صعوبة هاش",
   "Help": "مساعدة",
   "High": "عالي",
+  "I have read and Accept the Agreement": null,
+  "I understand the risk": null,
   "IMPROPER USE OF THIS SOFTWARE COULD LEAD TO PERMANENT LOSS OF COIN.": "قد يؤدي استخدام غيرصحيح لهذا البرنامج إلى خسارة دائمة للعملة.",
   "IP address": "عنوان IP",
   "IP address configured for manual Core.": "عنوان IP مكون للوضع اليدوي للنواة.",
+  "IP/Ports allowed to mine to. Separate by <b>;</b> . Wildcards supported only in IP": null,
   "Ignore": "تجاهل",
   "Immature": "غير ناضج",
+  "Immature Balance": null,
   "Import": "استيراد",
   "Import custom theme": "تصدير موضوع مخصص",
   "Import private key": "استيراد مفتاح خاص",
-  "Incorrect password": "كلمة السر خاطئة",
   "Install Module": "تثبيت الوحدة",
   "Install it later": "قم بتثبيت في وقت لاحق",
   "Installing Module...": "تثبيت الوحدة...",
@@ -208,7 +212,10 @@
   "Label (optional)": "تسمية (اختياري)",
   "Language": "لغة",
   "Last updated\n%{time}": "آخر تحديث%{time}",
+  "License Agreement": null,
   "Light": "ضوء",
+  "Loading transaction details...": null,
+  "Loading transactions": null,
   "Local Time": "توقيت محلي",
   "Log in now": "سجل الدخول الآن",
   "Log out": "تسجيل الخروج",
@@ -233,6 +240,7 @@
   "Minimize the wallet when closing the window instead of closing it.": "تصغير المحفظة عند إغلاق النافذة بدلاً من إغلاقها.",
   "Minimum amount of confirmations before a block is accepted. Local only.": "الحد الأدنى من التأكيدات حتى يتقبل كتلة. محلي فقط.",
   "Minimum confirmations": "الحد الأدنى من التأكيدات",
+  "Mining IP Whitelist": null,
   "Module Details": "تفاصيل الوحدة",
   "Module Specifications version": "إصدار المواصفات للوحدة",
   "Module has been successfully installed": "تم تثبيت الوحدة بنجاح",
@@ -243,7 +251,6 @@
   "Module open source policy": "سياسة مفتوح المصدر للوحدة",
   "Module type": "نوع الوحدة",
   "Modules": "وحدات",
-  "More details": "مزيد من التفاصيل",
   "Move NXS": "انقل NXS",
   "Move NXS between accounts": "انقل NXS بين حسابات",
   "Moving the database...": "يتم نقل قاعدة البيانات...",
@@ -283,18 +290,15 @@
   "Not logged in": "لم يتم دخولك",
   "Not provided": "غير مزود",
   "Notes": "ملاحظات",
-  "OK": "موافق",
   "Only modules which have valid open source repositories are allowed to be installed and run. You can disable this option to test run the modules that you're developing": "مسموح فقط تثبيت وتشغيل الوحدات التي تحتوي على مستودعات صالحة مفتوحة المصدر. يمكنك تعطيل هذا الخيار لاختبار تشغيل الوحدات التي تقوم بتطويرها",
   "Open": "فتح",
   "Orphan": "يتيم",
   "Overview": "نظرة عامة",
   "Overview Display": "عرض نظرة عامة",
   "Overwrite module?": "كتابة فوق الوحدة؟",
-  "PENDING TRANSACTION": "معاملة معلقة",
   "Page": "صفحة",
   "Password": "كلمة السر",
   "Password cannot contain these characters:": "لا يمكن أن تحتوي كلمة السر على هذه الأحرف:",
-  "Password cannot contain these characters: - $ / & * | < >": "لا يمكن أن تحتوي كلمة السرعلى هذه الأحرف: - $ / & * | < >",
   "Password cannot start or end with spaces": "لا يمكن لكلمة المرور ان تبدأ او تنتهي بمسافة",
   "Password configured for manual Core.": "كلمة المرور مكون للنواة اليدوية.",
   "Password has been changed.": "تم تغيير كلمة السر.",
@@ -305,6 +309,7 @@
   "Past Week": "الأسبوع الماضي",
   "Past Year": "السنة الماضية",
   "Paste": "لصق",
+  "Pending": null,
   "Phone Number": "رقم الهاتف",
   "Phone number": "رقم الهاتف",
   "Please wait for Nexus Core to start.": "برجاء الانتظار ببدء النواة.",
@@ -345,9 +350,8 @@
   "Restart Core?": "إعادة تشغيل النواة؟",
   "Restarting Core...": "يتم إعادة تشغيل النواة...",
   "Restarting Nexus Core...": "يتم إعادة تشغيل النواة Nexus...",
-  "Rows": "صفوف",
-  "SET TIMEOUT FOR LOGIN": "وضع مهلة لتسجيل الدخول",
   "Sample Address": "عنوان نموذج",
+  "Save Settings": null,
   "Save changes": "حفظ التغييرات",
   "Search address": "بحث عنوان",
   "Search contact": "بحث اتصال",
@@ -365,19 +369,24 @@
   "Send": "إرسال",
   "Send NXS": "إرسال NXS",
   "Send To multiple recipients": "إرسال إلى مستلمين عدة",
+  "Send all": null,
   "Send anonymous usage data": "إرسال بيانات الاستخدام مجهولة",
   "Send anonymous usage data to allow the Nexus developers to improve the wallet.": "ارسال بيانات استخدام مجهولة لتسمح مطوري Nexus بتحسين المحفظة.",
   "Send from": "إرسال من",
   "Send to": "إرسال إلى",
   "Send transaction?": "إرسال المعاملة؟",
   "Sent": "أرسلت",
+  "Set timeout for login": null,
   "Settings": "الإعدادات",
+  "Settings Saving": null,
+  "Settings Unchanged": null,
+  "Show transactions chart": null,
   "Source code": "شيفرة مصدرية",
   "Stake": "صعوبة تولد الدخل",
-  "Stake Balance": "رصيد التوليد",
   "Stake Difficulty": "صعوبة التوليد",
   "Stake Rate": "معدل توليد الدخل",
   "Stake Weight": "وزن التوليد",
+  "Staking and mining rewards that need to get past 120 block-old to become available": null,
   "Start Nexus Core": "بدء نواة Nexus",
   "Stop Nexus Core": "توقف نواة Nexus",
   "Stopping Core...": "تتوقف النواة...",
@@ -385,7 +394,6 @@
   "Style": "الشكل",
   "Synchronized": "متزامن",
   "Synchronizing": "تتم المزامنة",
-  "TX Number": "رقم المعاملة (TX)",
   "The balance displayed might not be up-to-date since the wallet is not yet fully synchronized": "الرصيد المعروض قد يكون غير محدّثًا لأن المحفظة لم تتم مزامنتها بالكامل بعد",
   "The provided repository is not verified to be the real source code of this module": "لم يتم تحقق المستودع المقدم كمصدر الرمز الحقيقي لهذه الوحدة",
   "The wallet will now be refreshed for the new module to take effect": "سيتم الآن تحديث المحفظة لتصبح الوحدة الجديدة نافذة المفعول",
@@ -404,19 +412,22 @@
   "This repository does not exist or is private": "هذا الدليل غير موجود او خاص",
   "This repository is not verified to be the real source code of this module": "لم يتم تحقق هذا المستودع كمصدر الرمز الحقيقي لهذه الوحدة",
   "This setting change will only take effect after Core is restarted. Do you want to restart the Core now?": "لن يتم تغيير هذا الإعداد حتى إعادة تشغيل النواة. هل تريد إعادة تشغيل النواة الآن؟",
+  "Time": null,
   "Time is required": "الوقت مطلوب",
   "Time must be at least one hour in the future": "يجب أن يكون الوقت ساعة واحدة على الأقل في المستقبل",
   "Time span": "فترة زمنية",
   "Time zone": "منطقة زمنية",
-  "Time: ": "وقت: ",
   "To account": "إلى حساب",
   "Toggle Developer Tools": "تبديل إلى أدوات المطور",
   "Toggle FullScreen": "تغيير للشاشة الكاملة",
   "Toggle Module's Developer Tools": "تبديل إلى أدوات مطور الوحدة",
+  "Transaction ID": null,
   "Transaction details": "تفاصيل المعاملة",
   "Transaction received": "تم استلام المعاملة",
   "Transaction sent": "تم إرسال المعاملة",
   "Transactions": "معاملات",
+  "Transactions Details": null,
+  "Transactions chart": null,
   "Trust": "ثقة",
   "Trust Weight": "وزن ثقة",
   "Trust transaction": "معاملة ثقة",
@@ -425,10 +436,8 @@
   "Turn module open source policy on?": "تفعيل سياسة مفتوح المصدر للوحدة؟",
   "Turn policy off": "تعطيل السياسة",
   "Twinkling stars": "نجوم متلألئة",
-  "Type": "نوع",
   "Unknown": "مجهول",
   "Unknown login status": "حالة تسجل الدخول غير معروفة",
-  "Unlock until date/time must be at least an hour in the future": "فتح حتى تاريخ / وقت يجب أن يكون ما لا يقل عن ساعة في المستقبل",
   "Unsupported file type": "نوع ملف غير مدعوم",
   "Update available! Downloading...": "التحديث متاح! يتم التحميل...",
   "Used to correct transaction/balance issues, scans over every block in the database. Could take up to 10 minutes.": "يستخدم لتصحيح مشاكل المعاملات / الرصيد ، ويقوم بمسح كل كتلة في قاعدة البيانات. قد يستغرق ما يصل إلى 10 دقائق.",
@@ -443,13 +452,17 @@
   "View private key for address": "عرض المفتاح الخاص للعنوان",
   "Visit repository": "زيارة الدليل",
   "Volume": "حجم التداول",
+  "Waiting for 100% synchronization to start staking...": null,
+  "Waiting for average age of balance to exceed 72 hours to start staking...": null,
   "Wallet backed up": "تم نسخ المحفظة إحتياطياً",
   "Wallet has been backed up": "تم نسخ المحفظة احتياطيأ",
   "Wallet has been encrypted.": "تم تشفير المحفظة.",
   "Wallet is not encrypted": "المحفظة غير مشفرة",
   "Wallet is not staking": "المحفظة لا توليد الدخل",
   "Wallet is staking": "المحفظة توليد الدخل",
+  "Wallet password": null,
   "Wallet will be automatically refreshed for the change to take effect": "سيتم تحديث المحفظة تلقائيًا ليصبح التغيير نافذ المفعول",
+  "Warning": null,
   "Yes": "نعم",
   "Yes, abort": "نعم، أحبط",
   "Yes, let's bootstrap it": "نعم، قم بتمهيدها",
@@ -459,5 +472,6 @@
   "Your computer does not support OPENGL 2.0": "حاسوبك لا يدعم OPENGL 2.0",
   "Your wallet is not encrypted!": "المحفظة غير مشفرة!",
   "Your wallet password": "كلمة السر للمحفظة",
-  "or drag and drop it here": "او قم بالسحب والإسقاط هنا"
+  "or drag and drop it here": "او قم بالسحب والإسقاط هنا",
+  "rows": null
 }
