--- a/assets/translations/es.json
+++ b/assets/translations/es.json
@@ -1,9 +1,9 @@
 {
-  "%{name}'s Address": "Dirección de %{nombre}",
+  "%{name}'s Address": "Dirección de %{name}",
   "%{name}'s Nexus address": "la dirección Nexus de %{name}",
   "%{smart_count} address |||| %{smart_count} addresses": null,
   "(This will restart your Core)": null,
-  "24hr Change": "24hr Change",
+  "24hr Change": null,
   "A contact with the same name already exists.": "Ya existe un contacto con el mismo nombre.",
   "A module with the same directory name already exists": null,
   "ACCOUNT": "CUENTA",
@@ -33,10 +33,11 @@
   "Are you sure you want to log out?": "¿Está seguro de que desea cerrar sesión?",
   "Author": null,
   "Auto Update is not yet available on Mac, please update the wallet manually for the time being": "Auto Update aún no está disponible en Mac, por favor actualice la billetera manualmente por el momento",
-  "Auto update (Recommended)": "Auto update (Recommended)",
-  "Automatically check for new versions and notify if a new version is available.": "Buscar automáticamente nuevas versiones y notificar si hay una nueva versión disponible",
+  "Auto update (Recommended)": null,
+  "Automatically check for new versions and notify if a new version is available.": "Buscar automáticamente nuevas versiones y notificar si hay una nueva versión disponible.",
+  "Avatar Mode": null,
   "BACKUP OFTEN AND KEEP ENCRYPTION KEY SAFE.": null,
-  "Background": "Background",
+  "Background": null,
   "Background Color": "Color de fondo",
   "Backing up your wallet...": null,
   "Backing up...": null,
@@ -44,12 +45,12 @@
   "Backup directory": "Directorio de copia de seguridad",
   "Backup wallet": "Monedero de respaldo",
   "Balance": "Saldo",
-  "Block Count": "Block Count",
-  "Block Weight": "Block Weight",
+  "Block Count": null,
+  "Block Weight": null,
   "Block hash": null,
   "Bootstrap Recent Database": null,
   "Bootstrap process has been aborted": null,
-  "Browse": "Browse",
+  "Browse": null,
   "Build Date": null,
   "CATEGORY": "CATEGORÍA",
   "Cancel": "Cancelar",
@@ -63,7 +64,7 @@
   "Check wallet": "Revisar billetera",
   "Check wallet failed": "Falló el control de la billetera",
   "Check wallet pass": "Comprobar el pase de la billetera",
-  "Check wallet's integrity": "Comprobar la integridad de la billetera",
+  "Check wallet's integrity": null,
   "Checking for Updates...": null,
   "Checking module": null,
   "Checking sync status": null,
@@ -91,21 +92,22 @@
   "Copy to clipboard": null,
   "Core": "Núcleo",
   "Core is in Manual Mode": null,
+  "Core needs to restart for these settings to take effect!": null,
   "Core output": "Salida del núcleo",
   "Core restarting": "Reinicio del núcleo",
   "Core settings saved": "Configuraciones principales guardadas",
-  "Cosmic light": "Cosmic light",
+  "Cosmic light": null,
   "Create": "Crear",
   "Create new address": "Crear nueva dirección",
   "Create new contact": "Crear nuevo contacto",
-  "Custom": "Custom",
+  "Custom": null,
   "Custom wallpaper": "Fondo de pantalla personalizado",
   "Customize your background wallpaper": "Personaliza tu fondo de pantalla de fondo",
   "Cut": null,
   "Danger Color": null,
   "Danger Color Accent": null,
-  "Dark": "Dark",
-  "Data directory configured for manual Core.": "Directorio de datos configurado para el daemon manual",
+  "Dark": null,
+  "Data directory configured for manual Core.": "Directorio de datos configurado para el daemon manual.",
   "Data directory is required": "Se requiere el directorio de datos",
   "Data directory name": "Nombre del directorio de datos",
   "Date": "Fecha",
@@ -114,12 +116,13 @@
   "Decompressing...": null,
   "Delete": "Borrar",
   "Delete contact": null,
-  "Delete contact %{name}?": "Borrar contacto %{nombre}?",
+  "Delete contact %{name}?": "Borrar contacto %{name}?",
   "Deprecated Specification version": null,
   "Description": null,
   "Developer mode": "Modo de desarrollador",
-  "Development mode enables advanced features to aid in development. After enabling the wallet must be closed and reopened to enable those features.": "El modo de desarrollo habilita funciones avanzadas para ayudar en el desarrollo. Después de habilitar la billetera debe cerrarse y volver a abrirse para habilitar esas funciones",
+  "Development mode enables advanced features to aid in development. After enabling the wallet must be closed and reopened to enable those features.": "El modo de desarrollo habilita funciones avanzadas para ayudar en el desarrollo. Después de habilitar la billetera debe cerrarse y volver a abrirse para habilitar esas funciones.",
   "Disable %{moduleName}?": null,
+  "Disabling Avatar will make the core use a separate change key": null,
   "Dismiss": null,
   "Display Test Transactions on the Transactions page": "Mostrar transacciones de prueba en la página Transacciones",
   "Display name": null,
@@ -132,19 +135,19 @@
   "Drop here to install": null,
   "Edit": "Editar",
   "Edit contact": "Editar contacto",
-  "Email": "Email",
+  "Email": null,
   "Email address": "Dirección de correo electrónico",
   "Enable %{moduleName}?": null,
-  "Enable manual Core mode if you are running the Nexus Core manually outside of the wallet.": "Habilita el modo daemon manual si ejecutas el Daemon manualmente fuera de la billetera",
+  "Enable manual Core mode if you are running the Nexus Core manually outside of the wallet.": "Habilita el modo daemon manual si ejecutas el Daemon manualmente fuera de la billetera.",
   "Enable mining": "Habilitar minería",
   "Enable staking": "Habilitar replanteo",
-  "Enable/Disable mining to the wallet.": "Habilitar/Deshabilitar la extracción en la cartera",
-  "Enable/Disable staking on the wallet.": "Habilitar/Deshabilitar el replanteo en la cartera",
+  "Enable/Disable mining to the wallet.": "Habilitar/Deshabilitar la extracción en la cartera.",
+  "Enable/Disable staking on the wallet.": "Habilitar/Deshabilitar el replanteo en la cartera.",
   "Encrypt and restart": "Cifrar y reiniciar",
   "Encrypt wallet": "Encriptar billetera",
   "Enter a new account name or pick an existing account:": null,
   "Enter address here": "Introduzca la dirección aquí",
-  "Enter console commands here (ex: getinfo, help)": "Ingrese los comandos de la consola aquí (por ejemplo, getinfo, ayuda)",
+  "Enter console commands here (ex: getinfo, help)": "Ingrese los comandos de la consola aquí (por ejemplo: getinfo, help)",
   "Enter manual Core mode?": "¿Entrar en el modo manual de daemon?",
   "Enter your message": "Ingrese su mensaje",
   "Enter your wallet password": null,
@@ -173,7 +176,7 @@
   "Generate": "Generar",
   "Genesis": "Génesis",
   "Genesis transaction": "Transacción de génesis",
-  "Getting next block...": "Obteniendo el siguiente bloque ...",
+  "Getting next block...": "Obteniendo el siguiente bloque...",
   "Globe Arch Color": "Color del arco del globo",
   "Globe Color": "Color del globo",
   "Globe Pillar Color": "Color del pilar del globo",
@@ -183,8 +186,9 @@
   "I have read and Accept the Agreement": null,
   "I understand the risk": null,
   "IMPROPER USE OF THIS SOFTWARE COULD LEAD TO PERMANENT LOSS OF COIN.": null,
-  "IP address": "dirección IP",
-  "IP address configured for manual Core.": "Dirección IP configurada para el demonio manual",
+  "IP address": "Dirección IP",
+  "IP address configured for manual Core.": "Dirección IP configurada para el demonio manual.",
+  "IP/Ports allowed to mine to. Separate by <b>;</b> . Wildcards supported only in IP": null,
   "Ignore": "Ignorar",
   "Immature": null,
   "Immature Balance": null,
@@ -203,13 +207,13 @@
   "It is highly recommended that you should encrypt your wallet to keep your NXS safe.": null,
   "Keep auto update On": "Mantener la actualización automática activada",
   "Keep policy on": null,
-  "Keeping your wallet up-to-date is important for your security and will ensure that you get the best possible user experience.": "Mantener su billetera actualizada es importante para su seguridad y garantizará que obtenga la mejor experiencia de usuario posible",
+  "Keeping your wallet up-to-date is important for your security and will ensure that you get the best possible user experience.": "Mantener su billetera actualizada es importante para su seguridad y garantizará que obtenga la mejor experiencia de usuario posible.",
   "Key Management": null,
   "Label (optional)": "Label (opcional)",
   "Language": "Idioma",
   "Last updated\n%{time}": null,
   "License Agreement": null,
-  "Light": "Light",
+  "Light": null,
   "Loading transaction details...": null,
   "Loading transactions": null,
   "Local Time": "Hora local",
@@ -233,9 +237,10 @@
   "Message": "Mensaje",
   "Min amount": "Importe mínimo",
   "Minimize on close": "Minimizar al cerrar",
-  "Minimize the wallet when closing the window instead of closing it.": "Minimiza la billetera al cerrar la ventana en lugar de cerrarla",
+  "Minimize the wallet when closing the window instead of closing it.": "Minimiza la billetera al cerrar la ventana en lugar de cerrarla.",
   "Minimum amount of confirmations before a block is accepted. Local only.": "Cantidad mínima de confirmaciones antes de que se acepte un bloqueo. Solo local.",
   "Minimum confirmations": "Confirmaciones mínimas",
+  "Mining IP Whitelist": null,
   "Module Details": null,
   "Module Specifications version": null,
   "Module has been successfully installed": null,
@@ -253,12 +258,12 @@
   "My Account": "Mi cuenta",
   "My Addresses": "Mis direcciones",
   "My Nexus address": "Mi dirección Nexus",
-  "My Nexus address for %{name}": "Mi dirección Nexus para %{nombre}",
+  "My Nexus address for %{name}": "Mi dirección Nexus para %{name}",
   "NXS Amount": null,
   "NXS addresses": "Direcciones NXS",
   "NXS moved successfully": "NXS se movió correctamente",
-  "Name": "Name",
-  "Name is required.": "El nombre es obligatorio",
+  "Name": null,
+  "Name is required.": "El nombre es obligatorio.",
   "New address": null,
   "New address has been created": null,
   "New contact": "Nuevo contacto",
@@ -274,7 +279,7 @@
   "Nexus Git Repository": null,
   "Nexus Wallet Guide": null,
   "Nexus Website": null,
-  "No": "No",
+  "No": null,
   "No Rows Found": "No se encontraron filas",
   "No accounts selected": "No se seleccionaron cuentas",
   "No information": "No hay información",
@@ -293,9 +298,9 @@
   "Overwrite module?": null,
   "Page": "Página",
   "Password": "Contraseña",
-  "Password cannot contain these characters:": "La contraseña no puede contener estos caracteres:",
+  "Password cannot contain these characters:": null,
   "Password cannot start or end with spaces": "La contraseña no puede comenzar ni terminar con espacios",
-  "Password configured for manual Core.": "Contraseña configurada para el daemon manual",
+  "Password configured for manual Core.": "Contraseña configurada para el daemon manual.",
   "Password has been changed.": "La contraseña se ha cambiado.",
   "Password is required": "Se requiere contraseña",
   "Password must be at least 8 characters": "La contraseña debe tener al menos 8 caracteres",
@@ -309,7 +314,7 @@
   "Phone number": null,
   "Please wait for Nexus Core to start.": null,
   "Port": "Puerto",
-  "Port configured for manual Core.": "Puerto configurado para el daemon manual",
+  "Port configured for manual Core.": "Puerto configurado para el daemon manual.",
   "Previous": "Anterior",
   "Previous password": "Contraseña anterior",
   "Price": "Precio",
@@ -330,22 +335,23 @@
   "Recent database has been successfully bootstrapped": null,
   "Recipient address": "Dirección del destinatario",
   "Refresh": "Actualizar",
-  "Refreshing market data...": "Actualización de datos del mercado ...",
+  "Refreshing market data...": "Actualización de datos del mercado...",
   "Remove address": "Eliminar dirección",
   "Remove recipient": "Eliminar destinatario",
-  "Render globe": "Render globe",
-  "Render the globe on the Overview page.": "Representa el globo en la página de información general",
+  "Render globe": null,
+  "Render the globe on the Overview page.": "Representa el globo en la página de información general.",
   "Rescan wallet": "Volver a explorar la billetera",
   "Rescanned successfully": "Reexplorado con éxito",
   "Rescanning Wallet...": null,
   "Rescanning done": "Reexploración finalizada",
   "Rescanning...": "Reexplorando...",
-  "Reset": "Reset",
+  "Reset": null,
   "Restart Core": "Reiniciar el núcleo",
   "Restart Core?": "¿Reiniciar el núcleo?",
   "Restarting Core...": null,
-  "Restarting Nexus Core...": "Reiniciando el demonio ...",
+  "Restarting Nexus Core...": "Reiniciando el demonio...",
   "Sample Address": null,
+  "Save Settings": null,
   "Save changes": "Guardar cambios",
   "Search address": null,
   "Search contact": "Buscar contacto",
@@ -365,19 +371,21 @@
   "Send To multiple recipients": "Enviar a múltiples destinatarios",
   "Send all": null,
   "Send anonymous usage data": "Enviar datos de uso anónimos",
-  "Send anonymous usage data to allow the Nexus developers to improve the wallet.": "Envía datos de uso anónimos para permitir que los desarrolladores de Nexus mejoren la billetera",
+  "Send anonymous usage data to allow the Nexus developers to improve the wallet.": "Envía datos de uso anónimos para permitir que los desarrolladores de Nexus mejoren la billetera.",
   "Send from": "Enviar desde",
   "Send to": "Enviar a",
   "Send transaction?": "Enviar transacción?",
   "Sent": "Enviado",
   "Set timeout for login": null,
   "Settings": "Configuración",
+  "Settings Saving": null,
+  "Settings Unchanged": null,
   "Show transactions chart": null,
   "Source code": null,
   "Stake": "Estaca",
   "Stake Difficulty": "Dificultad Stake",
-  "Stake Rate": "Stake Rate",
-  "Stake Weight": "Stake Weight",
+  "Stake Rate": null,
+  "Stake Weight": null,
   "Staking and mining rewards that need to get past 120 block-old to become available": null,
   "Start Nexus Core": null,
   "Stop Nexus Core": null,
@@ -397,7 +405,7 @@
   "There must be at least one address.": "Debe haber al menos una dirección.",
   "There must be at least one recipient": "Debe haber al menos un destinatario",
   "This is an address registered to this wallet.": "Esta es una dirección registrada en esta billetera.",
-  "This is not one of your addresses.": "Esta no es una de sus direcciones",
+  "This is not one of your addresses.": "Esta no es una de sus direcciones.",
   "This is one of your addresses.": "Esta es una de sus direcciones.",
   "This is your Default Address": null,
   "This module is developed by Nexus": null,
@@ -421,22 +429,22 @@
   "Transactions Details": null,
   "Transactions chart": null,
   "Trust": "Fidelidad",
-  "Trust Weight": "Trust Weight",
+  "Trust Weight": null,
   "Trust transaction": "Transacción de Fidelidad",
   "Turn auto update Off": "Desactivar la actualización automática",
   "Turn module open source policy off?": null,
   "Turn module open source policy on?": null,
   "Turn policy off": null,
-  "Twinkling stars": "Twinkling stars",
+  "Twinkling stars": null,
   "Unknown": "Desconocido",
   "Unknown login status": null,
   "Unsupported file type": null,
   "Update available! Downloading...": null,
-  "Used to correct transaction/balance issues, scans over every block in the database. Could take up to 10 minutes.": "Se utiliza para corregir problemas de transacciones / saldos, escanea cada bloque en la base de datos. Puede llevar hasta 10 minutos",
-  "Username": "Username",
-  "Username configured for manual Core.": "Nombre de usuario configurado para el demonio manual",
+  "Used to correct transaction/balance issues, scans over every block in the database. Could take up to 10 minutes.": "Se utiliza para corregir problemas de transacciones / saldos, escanea cada bloque en la base de datos. Puede llevar hasta 10 minutos.",
+  "Username": null,
+  "Username configured for manual Core.": "Nombre de usuario configurado para el demonio manual.",
   "Verbose level": "Nivel detallado",
-  "Verbose level for logs.": "Nivel detallado para registros",
+  "Verbose level for logs.": "Nivel detallado para registros.",
   "Version": null,
   "View": null,
   "View Backups": null,
