--- a/assets/translations/fi.json
+++ b/assets/translations/fi.json
@@ -2,9 +2,7 @@
   "%{name}'s Address": "%{name}'s Osoite",
   "%{name}'s Nexus address": "%{name}'s Nexus osoite",
   "%{smart_count} address |||| %{smart_count} addresses": "-> %{smart_count} osoite |||| %{smart_count} osoitteet",
-  "(Pending)": "(Odottaa)",
   "(This will restart your Core)": "(Tämä uudelleenkäynnistää ytimen)",
-  "* - $ / & * | < >": "* - $ / & * | < >",
   "24hr Change": "24h Muutos",
   "A contact with the same name already exists.": "Samanniminen yhteystieto on jo olemassa.",
   "A module with the same directory name already exists": "Samanniminen kansio jo jollain moduulilla käytössä",
@@ -28,7 +26,6 @@
   "All Accounts": "Kaikki tilit",
   "All modules without open source verifications, possibly including your own under-development modules, will become invalid. Wallet must be refreshed for the change to take effect.": "Kaikki moduulit, joilla ei ole avoimen lähdekoodin verifikaatioita, mahdollisesti omassa kehityksessä olevat moduulit muuttuvat kelvottomiksi. Lompakko täytyy ladata uudelleen, jotta muutos tulee voimaan.",
   "Amount": "Määrä",
-  "Amount: ": "Määrä: ",
   "An unknown error occurred": "Tuntematon virhe tapahtui",
   "Application": "Sovellus",
   "Are you sure you want to abort the process?": "Oletko varma, että haluat keskeyttää prosessin?",
@@ -38,6 +35,7 @@
   "Auto Update is not yet available on Mac, please update the wallet manually for the time being": "Automaattiset päivitykset eivät vielä ole saatavilla Macilla, päivitäthän lompakkosi manuaalisesti toistaiseksi",
   "Auto update (Recommended)": "Automaattinen päivitys (Suositeltu)",
   "Automatically check for new versions and notify if a new version is available.": "Automaattisesti tarkistaa onko uusia versioita saatavilla ja ilmoittaa kun on.",
+  "Avatar Mode": null,
   "BACKUP OFTEN AND KEEP ENCRYPTION KEY SAFE.": "VARMUUSKOPIOI USEASTI JA PIDÄ SALAUSAVAIMESI TURVASSA.",
   "Background": "Taustakuva",
   "Background Color": "Taustaväri",
@@ -48,9 +46,8 @@
   "Backup wallet": "Varmuuskopioi lompakko",
   "Balance": "Saldo",
   "Block Count": "Lohko lukumäärä",
-  "Block Hash": "Lohkon Hajautus",
-  "Block Number": "Lohko Numero",
   "Block Weight": "Lohko Paino",
+  "Block hash": null,
   "Bootstrap Recent Database": "Esilataa Tuore Tietokanta",
   "Bootstrap process has been aborted": "Esilataus prosessi on keskeytetty",
   "Browse": "Selaa",
@@ -61,6 +58,7 @@
   "Cannot find module": "Moduulia ei löydy",
   "Cannot install from that location": "Ei voida asentaa tuosta sijainnista",
   "Cannot move to the same account": "Ei voi siirtää samalle tilille",
+  "Category": null,
   "Change password": "Vaihda salasana",
   "Check for Updates...": "Tarkista päivitykset...",
   "Check wallet": "Tarkista lompakko",
@@ -79,6 +77,7 @@
   "Closing Nexus Wallet": "Suljetaan Nexus Lompakko",
   "Color scheme": "Väriteema",
   "Color scheme has been reset to default": "Valinnat päivitetty oletukseksi",
+  "Confirm": null,
   "Confirm password": "Vahvista salasana",
   "Confirmations": "Vahvistuksia",
   "Connecting to Nexus Core": "Yhdistetään Nexus Ytimeen",
@@ -93,6 +92,7 @@
   "Copy to clipboard": "Kopioi leikepöydälle",
   "Core": "Ydin",
   "Core is in Manual Mode": "Ydin on Manuaalisessa Tilassa",
+  "Core needs to restart for these settings to take effect!": null,
   "Core output": "Ytimen tuloste",
   "Core restarting": "Ydin uudelleenkäynnistyy",
   "Core settings saved": "Ytimen asetukset tallennettu",
@@ -122,13 +122,13 @@
   "Developer mode": "Kehittäjätila",
   "Development mode enables advanced features to aid in development. After enabling the wallet must be closed and reopened to enable those features.": "Kehittäjätila sallii kehittyneiden ominaisuuksien käytön auttaakseen kehityksessä. Kun laitat sen päälle, lompakko täytyy sulkea ja avata uudelleen.",
   "Disable %{moduleName}?": "Ota pois päältä %{moduleName}?",
+  "Disabling Avatar will make the core use a separate change key": null,
   "Dismiss": "Hylkää",
   "Display Test Transactions on the Transactions page": "Näytä Testi Rahansiirrot Rahansiirto sivulla",
   "Display name": "Näyttönimi",
-  "Don't show this again": "Älä näytä tätä uudelleen",
-  "Download": "Lataa",
   "Download Recent Database": "Lataa Tuore Tietokanta",
   "Download recent database?": "Lataa tuore tietokanta?",
+  "Download transactions history": null,
   "Downloading": "Ladataan",
   "Downloading a recent version of the database might reduce the time it takes to synchronize your wallet": "Tuoreen version lataus tietokannasta saattaa vähentää aikaa, joka vaaditaan lompakon synkronisointiin",
   "Downloading the database": "Ladataan tietokantaa",
@@ -150,6 +150,7 @@
   "Enter console commands here (ex: getinfo, help)": "Syötä konsoli komennot tänne (esim: getinfo, help)",
   "Enter manual Core mode?": "Käynnistetäänkö manuaalinen Ydin tila?",
   "Enter your message": "Syötä viestisi",
+  "Enter your wallet password": null,
   "Error bootstrapping recent database": "Virhe esiladatessa tuoretta tietokantaa",
   "Error changing password": "Salasanan vaihtamisessa tapahtui virhe",
   "Error copying module files": "Moduulin tiedostojen kopioimisessa tapahtui virhe",
@@ -182,15 +183,18 @@
   "Hash Difficulty": "Tarkisteen Vaikeustaso",
   "Help": "Apua",
   "High": "Korkea",
+  "I have read and Accept the Agreement": null,
+  "I understand the risk": null,
   "IMPROPER USE OF THIS SOFTWARE COULD LEAD TO PERMANENT LOSS OF COIN.": "TÄMÄN OHJELMISTON SOPIMATON KÄYTTÖ VOI JOHTAA RAHOJESI PYSYVÄÄN KADOTUKSEEN.",
   "IP address": "IP osoite",
   "IP address configured for manual Core.": "IP osoite konfiguroitu manuaaliselle Ytimelle.",
+  "IP/Ports allowed to mine to. Separate by <b>;</b> . Wildcards supported only in IP": null,
   "Ignore": "Ohita",
   "Immature": "Kypsymätön",
+  "Immature Balance": null,
   "Import": "Tuo",
   "Import custom theme": "Tuo mukautettu teema",
   "Import private key": "Tuo yksityisavain",
-  "Incorrect password": "Väärä salasana",
   "Install Module": "Asenna moduuli",
   "Install it later": "Asenna myöhemmin",
   "Installing Module...": "Asennetaan moduulia...",
@@ -208,7 +212,10 @@
   "Label (optional)": "Nimike (valinnainen)",
   "Language": "Kieli",
   "Last updated\n%{time}": "Viimeksi päivitetty\n%{time}",
+  "License Agreement": null,
   "Light": "Vaalea",
+  "Loading transaction details...": null,
+  "Loading transactions": null,
   "Local Time": "Paikallinen aika",
   "Log in now": "Kirjaudu sisään nyt",
   "Log out": "Kirjaudu ulos",
@@ -233,6 +240,7 @@
   "Minimize the wallet when closing the window instead of closing it.": "Pienennä lompakko suljettaessa sulkemisen sijaan.",
   "Minimum amount of confirmations before a block is accepted. Local only.": "Vähimmäismäärä hyväksyntöjä kunnes lohko hyväksytään. Vain paikallinen.",
   "Minimum confirmations": "Vähimmäismäärä hyväksyntöjä",
+  "Mining IP Whitelist": null,
   "Module Details": "Moduulin Tiedot",
   "Module Specifications version": "Moduulin Määrittely versio",
   "Module has been successfully installed": "Moduuli on asennettu onnistuneesti",
@@ -243,7 +251,6 @@
   "Module open source policy": "Moduulin avoimen lähdekoodin käytäntö",
   "Module type": "Moduulin tyyppi",
   "Modules": "Moduulit",
-  "More details": "Lisätietoja",
   "Move NXS": "Siirrä NXS",
   "Move NXS between accounts": "Siirrä NXS tilien välillä",
   "Moving the database...": "Siirretään tietokantaa...",
@@ -283,18 +290,15 @@
   "Not logged in": "Et ole kirjautunut",
   "Not provided": "Ei tarjolla",
   "Notes": "Merkinnät",
-  "OK": "OK",
   "Only modules which have valid open source repositories are allowed to be installed and run. You can disable this option to test run the modules that you're developing": "Vain moduulit, joilla on validi avoimen lähdekoodin tietolähde sallitaan asennettavaksi ja ajettavaksi. Voit ottaa tämän pois päältä testataksesi moduuleja, joita kehität",
   "Open": "Avaa",
   "Orphan": "Orpo",
   "Overview": "Yleiskatsaus",
   "Overview Display": "Yleiskatsaus Näyttö",
   "Overwrite module?": "Ylikirjoita moduuli?",
-  "PENDING TRANSACTION": "ODOTTAVA RAHANSIIRTO",
   "Page": "Sivu",
   "Password": "Salasana",
   "Password cannot contain these characters:": "Salasanassa ei saa olla seuraavia merkkejä:",
-  "Password cannot contain these characters: - $ / & * | < >": "Salasanassa ei saa olla seuraavia merkkejä: - $ / & * | < >",
   "Password cannot start or end with spaces": "Salasana ei voi alkaa tai loppua välilyönteihin",
   "Password configured for manual Core.": "Salasana konfiguroitu manuaaliselle Ytimelle.",
   "Password has been changed.": "Salasanasi on muutettu.",
@@ -305,6 +309,7 @@
   "Past Week": "Viime viikolla",
   "Past Year": "Viime vuonna",
   "Paste": "Liitä",
+  "Pending": null,
   "Phone Number": "Puhelinnumero",
   "Phone number": "Puhelinnumero",
   "Please wait for Nexus Core to start.": "Odota, että Nexus Ydin käynnistyy.",
@@ -345,9 +350,8 @@
   "Restart Core?": "Uudelleenkäynnistä Ydin?",
   "Restarting Core...": "Uudelleenkäynnistetään Ydintä...",
   "Restarting Nexus Core...": "Uudelleenkäynnistetään Nexus Ydintä...",
-  "Rows": "Rivit",
-  "SET TIMEOUT FOR LOGIN": "ASETA AJASTIN ULOSKIRJAUTUMISEEN",
   "Sample Address": "Malli Osoite",
+  "Save Settings": null,
   "Save changes": "Tallenna muutokset",
   "Search address": "Etsi osoite",
   "Search contact": "Etsi yhteystieto",
@@ -365,19 +369,24 @@
   "Send": "Lähetä",
   "Send NXS": "Lähetä NXS",
   "Send To multiple recipients": "Lähetä usealle vastaanottajalle",
+  "Send all": null,
   "Send anonymous usage data": "Lähetä anonyymiä käyttötietoa",
   "Send anonymous usage data to allow the Nexus developers to improve the wallet.": "Lähetä anonyymiä käyttötietoa, jotta Nexuksen kehittäjät voivat parantaa lompakkoa.",
   "Send from": "Lähetä osoitteesta",
   "Send to": "Lähetä vastaanottajalle",
   "Send transaction?": "Lähetä rahansiirto?",
   "Sent": "Lähetetty",
+  "Set timeout for login": null,
   "Settings": "Asetukset",
+  "Settings Saving": null,
+  "Settings Unchanged": null,
+  "Show transactions chart": null,
   "Source code": "Lähdekoodi",
   "Stake": "Panos",
-  "Stake Balance": "Panostus Määrä",
   "Stake Difficulty": "Panostuksen Vaikeustaso",
   "Stake Rate": "Panostus Kurssi",
   "Stake Weight": "Panostuksen Paino",
+  "Staking and mining rewards that need to get past 120 block-old to become available": null,
   "Start Nexus Core": "Käynnistä Nexus Ydin",
   "Stop Nexus Core": "Pysäytä Nexus Ydin",
   "Stopping Core...": "Pysäytetään Ydin...",
@@ -385,7 +394,6 @@
   "Style": "Tyyli",
   "Synchronized": "Synkronoitu",
   "Synchronizing": "Synkronoidaan",
-  "TX Number": "TX numero",
   "The balance displayed might not be up-to-date since the wallet is not yet fully synchronized": "Tase ei välttämättä näytä oikeaa, sillä lompakko ei ole täysin synkronoitu",
   "The provided repository is not verified to be the real source code of this module": "Välitetty tietolähde ei ole vahvistettu olevan oikea lähdekoodi tälle moduulille",
   "The wallet will now be refreshed for the new module to take effect": "Lompakko päivitetään nyt, jotta uusi moduuli tulee käyttöön",
@@ -404,19 +412,22 @@
   "This repository does not exist or is private": "Tätä tietolähdettä ei ole tai se on yksityinen",
   "This repository is not verified to be the real source code of this module": "Välitetty tietolähde ei ole vahvistettu olevan oikea lähdekoodi tälle moduulille",
   "This setting change will only take effect after Core is restarted. Do you want to restart the Core now?": "Tämä asetus astuu voimaan kun Ydin on uudelleenkäynnistetty. Haluatko käynnistää Ytimen uudestaan nyt?",
+  "Time": null,
   "Time is required": "Aika vaaditaan",
   "Time must be at least one hour in the future": "Ajan on oltava vähintään yksi tunti tulevaisuudessa",
   "Time span": "Aikaväli",
   "Time zone": "Aikavyöhyke",
-  "Time: ": "Aika: ",
   "To account": "Tilille",
   "Toggle Developer Tools": "Kehittäjätyökalut päälle/pois",
   "Toggle FullScreen": "Laajenna koko näytön kokoiseksi",
   "Toggle Module's Developer Tools": "Moduulin Kehittäjätyökalut päälle/pois",
+  "Transaction ID": null,
   "Transaction details": "Rahansiirto tiedot",
   "Transaction received": "Rahansiirto vastaanotettu",
   "Transaction sent": "Rahansiirto lähetetty",
   "Transactions": "Maksutapahtumat",
+  "Transactions Details": null,
+  "Transactions chart": null,
   "Trust": "Luotto",
   "Trust Weight": "Luoton Paino",
   "Trust transaction": "Luotto rahansiirto",
@@ -425,10 +436,8 @@
   "Turn module open source policy on?": "Moduulin avoimen lähdekoodin käytäntö päälle?",
   "Turn policy off": "Käytäntö pois",
   "Twinkling stars": "Tuikkivat tähdet",
-  "Type": "Tyyppi",
   "Unknown": "Tuntematon",
   "Unknown login status": "Tuntematon kirjautuminen",
-  "Unlock until date/time must be at least an hour in the future": "Avaa lompakko kunnes pvm/aika on oltava vähintään tunti tulevaisuudessa",
   "Unsupported file type": "Tiedostotyyppiä ei tueta",
   "Update available! Downloading...": "Päivitys saatavilla! Ladataan...",
   "Used to correct transaction/balance issues, scans over every block in the database. Could take up to 10 minutes.": "Käytetään rahansiirtojen/taseiden ongelmien selvitykseen, skannaa jokaisen lohkon tietokannassa. Voi kestää yli 10 min.",
@@ -443,13 +452,17 @@
   "View private key for address": "Katso yksityisavain osoitteelle",
   "Visit repository": "Mene tietolähteeseen",
   "Volume": "Volyymi",
+  "Waiting for 100% synchronization to start staking...": null,
+  "Waiting for average age of balance to exceed 72 hours to start staking...": null,
   "Wallet backed up": "Lompakko varmuuskopioitu",
   "Wallet has been backed up": "Lompakko on varmuuskopioitu",
   "Wallet has been encrypted.": "Lompakko on salattu.",
   "Wallet is not encrypted": "Lompakkoa ei ole salattu",
   "Wallet is not staking": "Lompakko ei panosta",
   "Wallet is staking": "Lompakko panostaa",
+  "Wallet password": null,
   "Wallet will be automatically refreshed for the change to take effect": "Lompakko automaattisesti päivitetään, jotta muutos tulee voimaan",
+  "Warning": null,
   "Yes": "Kyllä",
   "Yes, abort": "Kyllä, lopeta",
   "Yes, let's bootstrap it": "Kyllä, esiladataan se",
@@ -459,5 +472,6 @@
   "Your computer does not support OPENGL 2.0": "Tietokoneesi ei tue OPENGL 2.0",
   "Your wallet is not encrypted!": "Lompakkoa ei ole salattu!",
   "Your wallet password": "Lompakkosi salasana",
-  "or drag and drop it here": "tai raahaa ja irroita se tänne"
+  "or drag and drop it here": "tai raahaa ja irroita se tänne",
+  "rows": null
 }
