--- a/assets/translations/ko.json
+++ b/assets/translations/ko.json
@@ -35,6 +35,7 @@
   "Auto Update is not yet available on Mac, please update the wallet manually for the time being": null,
   "Auto update (Recommended)": null,
   "Automatically check for new versions and notify if a new version is available.": null,
+  "Avatar Mode": null,
   "BACKUP OFTEN AND KEEP ENCRYPTION KEY SAFE.": null,
   "Background": null,
   "Background Color": "패널 배경색",
@@ -91,6 +92,7 @@
   "Copy to clipboard": null,
   "Core": "핵심",
   "Core is in Manual Mode": null,
+  "Core needs to restart for these settings to take effect!": null,
   "Core output": "코어 출력",
   "Core restarting": "코어 재시작",
   "Core settings saved": "저장된 핵심 설정",
@@ -118,8 +120,9 @@
   "Deprecated Specification version": null,
   "Description": null,
   "Developer mode": "개발자 모드",
-  "Development mode enables advanced features to aid in development. After enabling the wallet must be closed and reopened to enable those features.": "개발 모드를 사용하면 개발을 지원하는 고급 기능을 사용할 수 있습니다.이 기능을 사용하려면 지갑을 닫았다가 다시 열어야합니다.",
+  "Development mode enables advanced features to aid in development. After enabling the wallet must be closed and reopened to enable those features.": "개발 모드를 사용하면 개발을 지원하는 고급 기능을 사용할 수 있습니다. 이 기능을 사용하려면 지갑을 닫았다가 다시 열어야합니다.",
   "Disable %{moduleName}?": null,
+  "Disabling Avatar will make the core use a separate change key": null,
   "Dismiss": null,
   "Display Test Transactions on the Transactions page": null,
   "Display name": null,
@@ -185,6 +188,7 @@
   "IMPROPER USE OF THIS SOFTWARE COULD LEAD TO PERMANENT LOSS OF COIN.": null,
   "IP address": "IP 주소",
   "IP address configured for manual Core.": "수동 데몬 용으로 구성된 IP 주소",
+  "IP/Ports allowed to mine to. Separate by <b>;</b> . Wildcards supported only in IP": null,
   "Ignore": "무시",
   "Immature": null,
   "Immature Balance": null,
@@ -236,6 +240,7 @@
   "Minimize the wallet when closing the window instead of closing it.": "창을 닫지 않고 닫을 때 지갑을 최소화하십시오.",
   "Minimum amount of confirmations before a block is accepted. Local only.": "Blank",
   "Minimum confirmations": "최소 확인",
+  "Mining IP Whitelist": null,
   "Module Details": null,
   "Module Specifications version": null,
   "Module has been successfully installed": null,
@@ -346,6 +351,7 @@
   "Restarting Core...": null,
   "Restarting Nexus Core...": null,
   "Sample Address": null,
+  "Save Settings": null,
   "Save changes": null,
   "Search address": null,
   "Search contact": "연락처 검색",
@@ -372,6 +378,8 @@
   "Sent": "전송 됨",
   "Set timeout for login": null,
   "Settings": "설정",
+  "Settings Saving": null,
+  "Settings Unchanged": null,
   "Show transactions chart": null,
   "Source code": null,
   "Stake": null,
@@ -461,7 +469,7 @@
   "You are not logged in": null,
   "You need to log in to your wallet before sending transactions": null,
   "Your address book is empty": null,
-  "Your computer does not support OPENGL 2.0": "Your computer does not support OPENGL 2.0",
+  "Your computer does not support OPENGL 2.0": null,
   "Your wallet is not encrypted!": "월렛이 암호화되지 않았습니다!",
   "Your wallet password": null,
   "or drag and drop it here": null,
