--- a/assets/translations/nl.json
+++ b/assets/translations/nl.json
@@ -6,12 +6,12 @@
   "24hr Change": "24hr verandering",
   "A contact with the same name already exists.": null,
   "A module with the same directory name already exists": null,
-  "ACCOUNT": "ACCOUNT",
+  "ACCOUNT": null,
   "ADDRESS": "ADRES",
   "AMOUNT": "BEDRAG",
   "Abort": null,
   "About": null,
-  "Account": "Account",
+  "Account": null,
   "Account name": "Account Naam",
   "Account name is required": null,
   "Add Module": null,
@@ -35,6 +35,7 @@
   "Auto Update is not yet available on Mac, please update the wallet manually for the time being": null,
   "Auto update (Recommended)": "Auto Update (Aanbevolen)",
   "Automatically check for new versions and notify if a new version is available.": null,
+  "Avatar Mode": null,
   "BACKUP OFTEN AND KEEP ENCRYPTION KEY SAFE.": null,
   "Background": null,
   "Background Color": "Paneel Achtergrond Kleur",
@@ -82,7 +83,7 @@
   "Connecting to Nexus Core": "Portemonnee laden, een ogenblik geduld",
   "Connecting to Nexus Core...": null,
   "Connections": "Verbindingen",
-  "Console": "Console",
+  "Console": null,
   "Contact has been updated": null,
   "Contact info": null,
   "Contact name": null,
@@ -91,6 +92,7 @@
   "Copy to clipboard": null,
   "Core": "Kern",
   "Core is in Manual Mode": null,
+  "Core needs to restart for these settings to take effect!": null,
   "Core output": "Basis Output",
   "Core restarting": "Daemon Herstarten...",
   "Core settings saved": "Basis Instellingen Opgeslagen",
@@ -105,7 +107,7 @@
   "Danger Color": null,
   "Danger Color Accent": null,
   "Dark": null,
-  "Data directory configured for manual Core.": "Data folder geconfigureerd voor handmatige daemon",
+  "Data directory configured for manual Core.": "Data folder geconfigureerd voor handmatige daemon.",
   "Data directory is required": null,
   "Data directory name": "Data Folder Naam",
   "Date": "Datum",
@@ -118,8 +120,9 @@
   "Deprecated Specification version": null,
   "Description": null,
   "Developer mode": "Ontwikkelaarsmodus",
-  "Development mode enables advanced features to aid in development. After enabling the wallet must be closed and reopened to enable those features.": "Ontwikkelingsmodus maakt geavanceerde functies mogelijk om te helpen bij ontwikkeling. Nadat u de portemonnee hebt ingeschakeld, moet deze worden gesloten en opnieuw worden geopend om deze functies in te schakelen",
+  "Development mode enables advanced features to aid in development. After enabling the wallet must be closed and reopened to enable those features.": "Ontwikkelingsmodus maakt geavanceerde functies mogelijk om te helpen bij ontwikkeling. Nadat u de portemonnee hebt ingeschakeld, moet deze worden gesloten en opnieuw worden geopend om deze functies in te schakelen.",
   "Disable %{moduleName}?": null,
+  "Disabling Avatar will make the core use a separate change key": null,
   "Dismiss": null,
   "Display Test Transactions on the Transactions page": null,
   "Display name": null,
@@ -135,11 +138,11 @@
   "Email": null,
   "Email address": null,
   "Enable %{moduleName}?": null,
-  "Enable manual Core mode if you are running the Nexus Core manually outside of the wallet.": "Schakel de handmatige daemon modus in als u de daemon handmatig buiten de portemonnee uitvoert",
+  "Enable manual Core mode if you are running the Nexus Core manually outside of the wallet.": "Schakel de handmatige daemon modus in als u de daemon handmatig buiten de portemonnee uitvoert.",
   "Enable mining": "Mining inschakelen",
   "Enable staking": "Staking inschakelen",
-  "Enable/Disable mining to the wallet.": "Schakel mining aan / uit voor de portemonnee",
-  "Enable/Disable staking on the wallet.": "Schakel staking aan / uit voor de portemonnee",
+  "Enable/Disable mining to the wallet.": "Schakel mining aan / uit voor de portemonnee.",
+  "Enable/Disable staking on the wallet.": "Schakel staking aan / uit voor de portemonnee.",
   "Encrypt and restart": "Versleutel en Herstart",
   "Encrypt wallet": "Portemonnee Versleutelen",
   "Enter a new account name or pick an existing account:": null,
@@ -171,7 +174,7 @@
   "Foreground Color": "Tekst Kleur",
   "From account": "Van Account",
   "Generate": null,
-  "Genesis": "Genesis",
+  "Genesis": null,
   "Genesis transaction": "Genesis Transactie",
   "Getting next block...": "Volgende Block ophalen...",
   "Globe Arch Color": "Wereldbol Boog Kleur",
@@ -184,11 +187,12 @@
   "I understand the risk": null,
   "IMPROPER USE OF THIS SOFTWARE COULD LEAD TO PERMANENT LOSS OF COIN.": null,
   "IP address": "IP Adres",
-  "IP address configured for manual Core.": "IP adres geconfigureerd voor handmatige daemon",
+  "IP address configured for manual Core.": "IP adres geconfigureerd voor handmatige daemon.",
+  "IP/Ports allowed to mine to. Separate by <b>;</b> . Wildcards supported only in IP": null,
   "Ignore": "Negeren",
   "Immature": null,
   "Immature Balance": null,
-  "Import": "Importeer ",
+  "Import": "Importeer",
   "Import custom theme": "Selecteer Thema Bestand",
   "Import private key": "Importeer Privésleutel",
   "Install Module": null,
@@ -233,9 +237,10 @@
   "Message": "Bericht",
   "Min amount": "Minimum Bedrag",
   "Minimize on close": "Minimaliseer Bij Sluiten",
-  "Minimize the wallet when closing the window instead of closing it.": "Minimaliseer de portemonnee bij het sluiten van het venster in plaats van het af te sluiten",
+  "Minimize the wallet when closing the window instead of closing it.": "Minimaliseer de portemonnee bij het sluiten van het venster in plaats van het af te sluiten.",
   "Minimum amount of confirmations before a block is accepted. Local only.": "Minimaal aantal bevestigingen voordat een blok wordt geaccepteerd. Alleen lokaal.",
   "Minimum confirmations": "Minimum Bevestigingen",
+  "Mining IP Whitelist": null,
   "Module Details": null,
   "Module Specifications version": null,
   "Module has been successfully installed": null,
@@ -286,7 +291,7 @@
   "Not provided": null,
   "Notes": "Notities",
   "Only modules which have valid open source repositories are allowed to be installed and run. You can disable this option to test run the modules that you're developing": null,
-  "Open": "Open",
+  "Open": null,
   "Orphan": null,
   "Overview": "Overzicht",
   "Overview Display": null,
@@ -295,8 +300,8 @@
   "Password": "Wachtwoord",
   "Password cannot contain these characters:": null,
   "Password cannot start or end with spaces": null,
-  "Password configured for manual Core.": "Wachtwoord geconfigureerd voor handmatige daemon",
-  "Password has been changed.": "Wachtwoord werd aangepast",
+  "Password configured for manual Core.": "Wachtwoord geconfigureerd voor handmatige daemon.",
+  "Password has been changed.": "Wachtwoord werd aangepast.",
   "Password is required": "Wachtwoord vereist",
   "Password must be at least 8 characters": null,
   "Passwords do not match": "Wachtwoorden komen niet overeen",
@@ -309,7 +314,7 @@
   "Phone number": null,
   "Please wait for Nexus Core to start.": null,
   "Port": "Poort",
-  "Port configured for manual Core.": "Poort geconfigureerd voor handmatige daemon",
+  "Port configured for manual Core.": "Poort geconfigureerd voor handmatige daemon.",
   "Previous": "Vorige",
   "Previous password": "Vorig Wachtwoord",
   "Price": "Prijs",
@@ -334,18 +339,19 @@
   "Remove address": null,
   "Remove recipient": null,
   "Render globe": "Wereldbol weergeven",
-  "Render the globe on the Overview page.": "Geef de wereldbolweer op de overzichtspagina",
+  "Render the globe on the Overview page.": "Geef de wereldbolweer op de overzichtspagina.",
   "Rescan wallet": null,
   "Rescanned successfully": null,
   "Rescanning Wallet...": null,
-  "Rescanning done": "Opnieuw scannen voltooid ",
-  "Rescanning...": "Opnieuw scannen... ",
+  "Rescanning done": "Opnieuw scannen voltooid",
+  "Rescanning...": "Opnieuw scannen...",
   "Reset": null,
   "Restart Core": "Herstart Basiscomponenten",
   "Restart Core?": null,
   "Restarting Core...": null,
   "Restarting Nexus Core...": null,
   "Sample Address": null,
+  "Save Settings": null,
   "Save changes": null,
   "Search address": null,
   "Search contact": "Zoek Contactgegevens",
@@ -365,13 +371,15 @@
   "Send To multiple recipients": "Verzenden naar meerdere ontvangers",
   "Send all": null,
   "Send anonymous usage data": "Verzend anonieme gebruiksgegevens",
-  "Send anonymous usage data to allow the Nexus developers to improve the wallet.": "Verzend anonieme gebruiksgegevens zodat de Nexus ontwikkelaars de portemonnee kunnen verbeteren",
+  "Send anonymous usage data to allow the Nexus developers to improve the wallet.": "Verzend anonieme gebruiksgegevens zodat de Nexus ontwikkelaars de portemonnee kunnen verbeteren.",
   "Send from": "Verzend Van",
   "Send to": "Verzend Naar",
   "Send transaction?": "Transactie verzenden?",
   "Sent": "Verzenden",
   "Set timeout for login": null,
   "Settings": "Instellingen",
+  "Settings Saving": null,
+  "Settings Unchanged": null,
   "Show transactions chart": null,
   "Source code": null,
   "Stake": null,
@@ -396,7 +404,7 @@
   "There are currently no updates available": null,
   "There must be at least one address.": null,
   "There must be at least one recipient": null,
-  "This is an address registered to this wallet.": "Dit is een adres geregistreerd op deze portemonnee",
+  "This is an address registered to this wallet.": "Dit is een adres geregistreerd op deze portemonnee.",
   "This is not one of your addresses.": null,
   "This is one of your addresses.": null,
   "This is your Default Address": null,
@@ -420,7 +428,7 @@
   "Transactions": "Transacties",
   "Transactions Details": null,
   "Transactions chart": null,
-  "Trust": "Trust",
+  "Trust": null,
   "Trust Weight": "Trust Gewicht",
   "Trust transaction": "Trust Transactie",
   "Turn auto update Off": "Schakel Auto Update uit",
@@ -434,21 +442,21 @@
   "Update available! Downloading...": null,
   "Used to correct transaction/balance issues, scans over every block in the database. Could take up to 10 minutes.": null,
   "Username": "Gebruikersnaam",
-  "Username configured for manual Core.": "Gebruikersnaam geconfigureerd voor handmatige daemon",
+  "Username configured for manual Core.": "Gebruikersnaam geconfigureerd voor handmatige daemon.",
   "Verbose level": "Verbose niveau",
-  "Verbose level for logs.": "Niveau voor logboek opnamen",
+  "Verbose level for logs.": "Niveau voor logboek opnamen.",
   "Version": null,
   "View": null,
   "View Backups": null,
   "View private key": "Privésleutel weergeven",
   "View private key for address": "Bekijk privésleutel voor adres",
   "Visit repository": null,
-  "Volume": "Volume",
+  "Volume": null,
   "Waiting for 100% synchronization to start staking...": null,
   "Waiting for average age of balance to exceed 72 hours to start staking...": null,
   "Wallet backed up": "Backup van Portemonnee gelukt",
   "Wallet has been backed up": null,
-  "Wallet has been encrypted.": "Portemonnee werd versleuteld",
+  "Wallet has been encrypted.": "Portemonnee werd versleuteld.",
   "Wallet is not encrypted": null,
   "Wallet is not staking": null,
   "Wallet is staking": null,
