--- a/assets/translations/pt.json
+++ b/assets/translations/pt.json
@@ -1,10 +1,10 @@
 {
-  "%{name}'s Address": "Endereço do %{nome}",
-  "%{name}'s Nexus address": "endereço das Nexus do %{nome}",
+  "%{name}'s Address": "Endereço do %{name}",
+  "%{name}'s Nexus address": "endereço das Nexus do %{name}",
   "%{smart_count} address |||| %{smart_count} addresses": null,
   "(This will restart your Core)": null,
-  "24hr Change": "Mudança nas 24hrs ",
-  "A contact with the same name already exists.": "Já existe um contato com o mesmo nome",
+  "24hr Change": "Mudança nas 24hrs",
+  "A contact with the same name already exists.": "Já existe um contato com o mesmo nome.",
   "A module with the same directory name already exists": null,
   "ACCOUNT": "CONTA",
   "ADDRESS": "ENDEREÇO",
@@ -35,9 +35,10 @@
   "Auto Update is not yet available on Mac, please update the wallet manually for the time being": "A atualização automática ainda não está disponível no Mac, atualize a carteira manualmente por enquanto",
   "Auto update (Recommended)": "Atualização automática (recomendado)",
   "Automatically check for new versions and notify if a new version is available.": "Verifica automaticamente novas versões e notifica se uma nova versão está disponível.",
+  "Avatar Mode": null,
   "BACKUP OFTEN AND KEEP ENCRYPTION KEY SAFE.": null,
   "Background": "Fundo",
-  "Background Color": "Background Color",
+  "Background Color": null,
   "Backing up your wallet...": null,
   "Backing up...": null,
   "Backup Wallet": null,
@@ -45,7 +46,7 @@
   "Backup wallet": "Carteira de recuperamento",
   "Balance": "Saldo",
   "Block Count": "Contagem de blocos",
-  "Block Weight": "Block Weight",
+  "Block Weight": null,
   "Block hash": null,
   "Bootstrap Recent Database": null,
   "Bootstrap process has been aborted": null,
@@ -63,7 +64,7 @@
   "Check wallet": "Verificar carteira",
   "Check wallet failed": "Verifique se a carteira falhou",
   "Check wallet pass": "Verifique a chave da carteira",
-  "Check wallet's integrity": "Verifique a totalidade da carteira",
+  "Check wallet's integrity": null,
   "Checking for Updates...": null,
   "Checking module": null,
   "Checking sync status": null,
@@ -91,10 +92,11 @@
   "Copy to clipboard": null,
   "Core": "Núcleo",
   "Core is in Manual Mode": null,
+  "Core needs to restart for these settings to take effect!": null,
   "Core output": "Saida do núcleo",
   "Core restarting": "Reinicialização do núcleo",
   "Core settings saved": "Configurações principais salvas",
-  "Cosmic light": "Cosmic light",
+  "Cosmic light": null,
   "Create": "Criar",
   "Create new address": "Criar novo endereço",
   "Create new contact": "Criar novo contato",
@@ -105,7 +107,7 @@
   "Danger Color": null,
   "Danger Color Accent": null,
   "Dark": "Escuro",
-  "Data directory configured for manual Core.": "Diretório de dados configurado para o daemon manual",
+  "Data directory configured for manual Core.": "Diretório de dados configurado para o daemon manual.",
   "Data directory is required": "Diretório de dados é obrigatório",
   "Data directory name": "Nome do diretório de dados",
   "Date": "Data",
@@ -114,12 +116,13 @@
   "Decompressing...": null,
   "Delete": "Excluir",
   "Delete contact": null,
-  "Delete contact %{name}?": "Excluir contato %{nome}?",
+  "Delete contact %{name}?": "Excluir contato %{name}?",
   "Deprecated Specification version": null,
   "Description": null,
   "Developer mode": "Modo de desenvolvedor",
   "Development mode enables advanced features to aid in development. After enabling the wallet must be closed and reopened to enable those features.": "O modo de desenvolvimento permite que recursos avançados ajudem no desenvolvimento. Depois de ativar a carteira, é necessário fechar e reabrir para ativar esses recursos.",
   "Disable %{moduleName}?": null,
+  "Disabling Avatar will make the core use a separate change key": null,
   "Dismiss": null,
   "Display Test Transactions on the Transactions page": "Exibir transações de teste na página Transações",
   "Display name": null,
@@ -132,14 +135,14 @@
   "Drop here to install": null,
   "Edit": "Editar",
   "Edit contact": "Editar contato",
-  "Email": "Email",
+  "Email": null,
   "Email address": "Endereço de email",
   "Enable %{moduleName}?": null,
   "Enable manual Core mode if you are running the Nexus Core manually outside of the wallet.": "Ative o modo daemon manual se você estiver executando o Daemon manualmente fora da carteira.",
   "Enable mining": "Ativar mineração",
   "Enable staking": "Ativar o estacamento",
-  "Enable/Disable mining to the wallet.": "Ativar / desativar mineração para a carteira",
-  "Enable/Disable staking on the wallet.": "Ativar / Desativar a participação na carteira",
+  "Enable/Disable mining to the wallet.": "Ativar / desativar mineração para a carteira.",
+  "Enable/Disable staking on the wallet.": "Ativar / Desativar a participação na carteira.",
   "Encrypt and restart": "Criptografar e reiniciar",
   "Encrypt wallet": "Criptografar carteira",
   "Enter a new account name or pick an existing account:": null,
@@ -168,15 +171,15 @@
   "Fee": "Taxa",
   "Fiat currency": "Moeda da Fiat",
   "File": null,
-  "Foreground Color": "Foreground Color",
+  "Foreground Color": null,
   "From account": "Da conta",
   "Generate": "Gerar",
-  "Genesis": "Genesis",
+  "Genesis": null,
   "Genesis transaction": "Transação de Gênesis",
   "Getting next block...": "Obtendo o próximo bloco...",
-  "Globe Arch Color": "Globe Arch Color",
-  "Globe Color": "Globe Color",
-  "Globe Pillar Color": "Globe Pillar Color",
+  "Globe Arch Color": null,
+  "Globe Color": null,
+  "Globe Pillar Color": null,
   "Hash Difficulty": "Dificuldade Hash",
   "Help": null,
   "High": "Alto",
@@ -184,8 +187,9 @@
   "I understand the risk": null,
   "IMPROPER USE OF THIS SOFTWARE COULD LEAD TO PERMANENT LOSS OF COIN.": null,
   "IP address": "Endereço IP",
-  "IP address configured for manual Core.": "Endereço IP configurado para o daemon manual",
-  "Ignore": "Ignore",
+  "IP address configured for manual Core.": "Endereço IP configurado para o daemon manual.",
+  "IP/Ports allowed to mine to. Separate by <b>;</b> . Wildcards supported only in IP": null,
+  "Ignore": null,
   "Immature": "Imaturo",
   "Immature Balance": null,
   "Import": "Importar",
@@ -236,6 +240,7 @@
   "Minimize the wallet when closing the window instead of closing it.": "Minimize a carteira ao fechar a janela em vez de fechá-la.",
   "Minimum amount of confirmations before a block is accepted. Local only.": "Quantidade mínima de confirmações antes que um bloco seja aceito. Somente local.",
   "Minimum confirmations": "Confirmações mínimas",
+  "Mining IP Whitelist": null,
   "Module Details": null,
   "Module Specifications version": null,
   "Module has been successfully installed": null,
@@ -253,12 +258,12 @@
   "My Account": "Minha conta",
   "My Addresses": "Meus endereços",
   "My Nexus address": "Meu endereço do Nexus",
-  "My Nexus address for %{name}": "Meu endereço das Nexus para %{nome}",
+  "My Nexus address for %{name}": "Meu endereço das Nexus para %{name}",
   "NXS Amount": "Quantidade NXS",
   "NXS addresses": "Endereços NXS",
   "NXS moved successfully": "NXS movidas com sucesso",
   "Name": "Nome",
-  "Name is required.": "Nome é obrigatório",
+  "Name is required.": "Nome é obrigatório.",
   "New address": null,
   "New address has been created": null,
   "New contact": "Novo contato",
@@ -293,7 +298,7 @@
   "Overwrite module?": null,
   "Page": "Página",
   "Password": "Senha",
-  "Password cannot contain these characters:": "A senha não pode conter estes caracteres:",
+  "Password cannot contain these characters:": null,
   "Password cannot start or end with spaces": "A senha não pode iniciar ou terminar com espaços",
   "Password configured for manual Core.": "Senha configurada para daemon manual.",
   "Password has been changed.": "A senha foi alterada.",
@@ -309,13 +314,13 @@
   "Phone number": null,
   "Please wait for Nexus Core to start.": null,
   "Port": "Porta",
-  "Port configured for manual Core.": "Porta configurada para o daemon manual",
+  "Port configured for manual Core.": "Porta configurada para o daemon manual.",
   "Previous": "Anterior",
   "Previous password": "Senha interior",
   "Price": "Preço",
   "Price Change": "Alteração de preço",
-  "Primary Color": "Primary Color",
-  "Primary Color Accent": "Primary Color Accent",
+  "Primary Color": null,
+  "Primary Color Accent": null,
   "Prime Difficulty": "Dificuldade Prime",
   "Private key": "Chave privada",
   "Private key imported. Rescanning now": "Chave privada importada. Verificando novamente agora",
@@ -334,7 +339,7 @@
   "Remove address": "Remover endereço",
   "Remove recipient": "Remover destinatário",
   "Render globe": "Renderizar globo",
-  "Render the globe on the Overview page.": "Renderizar o globo na página Visão geral",
+  "Render the globe on the Overview page.": "Renderizar o globo na página Visão geral.",
   "Rescan wallet": "Redigitalizar carteira",
   "Rescanned successfully": "Redigitalizado com sucesso",
   "Rescanning Wallet...": null,
@@ -346,6 +351,7 @@
   "Restarting Core...": null,
   "Restarting Nexus Core...": "A reiniciar o daemon...",
   "Sample Address": null,
+  "Save Settings": null,
   "Save changes": "Salvar alterações",
   "Search address": null,
   "Search contact": "Pesquisar contato",
@@ -372,12 +378,14 @@
   "Sent": "Enviado",
   "Set timeout for login": null,
   "Settings": "Configurações",
+  "Settings Saving": null,
+  "Settings Unchanged": null,
   "Show transactions chart": null,
   "Source code": null,
-  "Stake": "Stake",
+  "Stake": null,
   "Stake Difficulty": "Dificuldade Stake",
   "Stake Rate": "Taxa Stake",
-  "Stake Weight": "Stake Weight",
+  "Stake Weight": null,
   "Staking and mining rewards that need to get past 120 block-old to become available": null,
   "Start Nexus Core": null,
   "Stop Nexus Core": null,
@@ -396,9 +404,9 @@
   "There are currently no updates available": null,
   "There must be at least one address.": "Deve haver pelo menos um endereço.",
   "There must be at least one recipient": "Deve haver pelo menos um destinatário",
-  "This is an address registered to this wallet.": "Este é um endereço registrado nesta carteira",
+  "This is an address registered to this wallet.": "Este é um endereço registrado nesta carteira.",
   "This is not one of your addresses.": "Este não é um dos seus endereços.",
-  "This is one of your addresses.": "Este é um dos seus endereços",
+  "This is one of your addresses.": "Este é um dos seus endereços.",
   "This is your Default Address": null,
   "This module is developed by Nexus": null,
   "This repository does not exist or is private": null,
@@ -421,20 +429,20 @@
   "Transactions Details": null,
   "Transactions chart": null,
   "Trust": "Confiança",
-  "Trust Weight": "Trust Weight",
+  "Trust Weight": null,
   "Trust transaction": "Transação de confiança",
   "Turn auto update Off": "Desativar atualização automática",
   "Turn module open source policy off?": null,
   "Turn module open source policy on?": null,
   "Turn policy off": null,
-  "Twinkling stars": "Twinkling stars",
+  "Twinkling stars": null,
   "Unknown": "Desconhecido",
   "Unknown login status": null,
   "Unsupported file type": null,
   "Update available! Downloading...": null,
   "Used to correct transaction/balance issues, scans over every block in the database. Could take up to 10 minutes.": "Usado para corrigir problemas de transação / balanceamento, analisa cada bloco no banco de dados. Pode demorar até 10 minutos.",
   "Username": "Nome de usuário",
-  "Username configured for manual Core.": "Nome de usuário configurado para o daemon manual",
+  "Username configured for manual Core.": "Nome de usuário configurado para o daemon manual.",
   "Verbose level": "Nível detalhado",
   "Verbose level for logs.": "Nível detalhado para logs.",
   "Version": null,
@@ -443,12 +451,12 @@
   "View private key": "Ver chave privada",
   "View private key for address": "Ver chave privada para endereço",
   "Visit repository": null,
-  "Volume": "Volume",
+  "Volume": null,
   "Waiting for 100% synchronization to start staking...": null,
   "Waiting for average age of balance to exceed 72 hours to start staking...": null,
   "Wallet backed up": "Cópia de segurança da carteira",
   "Wallet has been backed up": null,
-  "Wallet has been encrypted.": "A carteira foi criptografada",
+  "Wallet has been encrypted.": "A carteira foi criptografada.",
   "Wallet is not encrypted": null,
   "Wallet is not staking": null,
   "Wallet is staking": null,
