--- a/assets/translations/zh-cn.json
+++ b/assets/translations/zh-cn.json
@@ -2,9 +2,7 @@
   "%{name}'s Address": "%{name} 地址",
   "%{name}'s Nexus address": "%{name} Nexus地址",
   "%{smart_count} address |||| %{smart_count} addresses": "%{smart_count}地址 |||| %{smart_count}地址 ",
-  "(Pending)": "（等待处理）",
   "(This will restart your Core)": "(这将重新启动您的核心)",
-  "* - $ / & * | < >": "* -$/ &和 * | < >",
   "24hr Change": "24小时更改",
   "A contact with the same name already exists.": "已存在同一个名称的联系人。",
   "A module with the same directory name already exists": "该数据库链接名已存在",
@@ -28,7 +26,6 @@
   "All Accounts": "所有账户",
   "All modules without open source verifications, possibly including your own under-development modules, will become invalid. Wallet must be refreshed for the change to take effect.": "所有没有公开源验证的模块，可能包括您自己的发展模块，都将无效。钱包必须刷新，以便更改生效。",
   "Amount": "金额，数量",
-  "Amount: ": "金额，数量: ",
   "An unknown error occurred": "发生了一个未知错误：",
   "Application": "申请表",
   "Are you sure you want to abort the process?": "你确定你想要开始更新过程?",
@@ -38,6 +35,7 @@
   "Auto Update is not yet available on Mac, please update the wallet manually for the time being": "Mac上尚未提供自动更新，请暂时手动更新钱包。",
   "Auto update (Recommended)": "自动更新 (推荐)",
   "Automatically check for new versions and notify if a new version is available.": "自动检查新版本并通知新版本是否可用。",
+  "Avatar Mode": null,
   "BACKUP OFTEN AND KEEP ENCRYPTION KEY SAFE.": "备份并保持加密密钥安全。",
   "Background": "背景，后台。",
   "Background Color": "背景色",
@@ -48,9 +46,8 @@
   "Backup wallet": "备份钱包",
   "Balance": "余额",
   "Block Count": "块计数",
-  "Block Hash": "块哈希",
-  "Block Number": "块编号",
   "Block Weight": "块重量",
+  "Block hash": null,
   "Bootstrap Recent Database": "启动最近数据库",
   "Bootstrap process has been aborted": "启动程序已被中止",
   "Browse": "浏览",
@@ -61,6 +58,7 @@
   "Cannot find module": "找不到模块",
   "Cannot install from that location": "无法从那个位置安装",
   "Cannot move to the same account": "无法移动到同一帐户",
+  "Category": null,
   "Change password": "更改密码",
   "Check for Updates...": "检查更新...",
   "Check wallet": "检查钱包",
@@ -79,6 +77,7 @@
   "Closing Nexus Wallet": "关闭Nexus钱包",
   "Color scheme": "配色方案",
   "Color scheme has been reset to default": "颜色方案已被重置为默认",
+  "Confirm": null,
   "Confirm password": "确认密码",
   "Confirmations": "确认",
   "Connecting to Nexus Core": "连接到Nexus核心",
@@ -93,6 +92,7 @@
   "Copy to clipboard": "复制到剪贴板",
   "Core": "核心",
   "Core is in Manual Mode": "核心处于手动模式",
+  "Core needs to restart for these settings to take effect!": null,
   "Core output": "核心输出",
   "Core restarting": "核心重启",
   "Core settings saved": "保存核心设置",
@@ -122,13 +122,13 @@
   "Developer mode": "开发人员模式",
   "Development mode enables advanced features to aid in development. After enabling the wallet must be closed and reopened to enable those features.": "开发模式使高级功能有助于开发。启用钱包后，必须关闭并重新打开以启用这些功能。",
   "Disable %{moduleName}?": "禁用 %{moduleName}?",
+  "Disabling Avatar will make the core use a separate change key": null,
   "Dismiss": "解除，取消。",
   "Display Test Transactions on the Transactions page": "在“交易”页面上显示“测试交易”",
   "Display name": "显示昵称",
-  "Don't show this again": "不再显示",
-  "Download": "下载",
   "Download Recent Database": "下载最近的数据库",
   "Download recent database?": "下载最近的数据库？",
+  "Download transactions history": null,
   "Downloading": "正在下载",
   "Downloading a recent version of the database might reduce the time it takes to synchronize your wallet": "下载数据库最新版本可能会减少同步你的钱包所需的时间",
   "Downloading the database": "正在下载数据库",
@@ -150,6 +150,7 @@
   "Enter console commands here (ex: getinfo, help)": "在此输入控制台命令 (前称：getinfo，帮助)",
   "Enter manual Core mode?": "输入手动核心模式？",
   "Enter your message": "输入您的讯息",
+  "Enter your wallet password": null,
   "Error bootstrapping recent database": "启动最近的数据库时出错",
   "Error changing password": "更改密码出错",
   "Error copying module files": "复制模块文件时出错",
@@ -182,15 +183,18 @@
   "Hash Difficulty": "哈希难度",
   "Help": "帮助",
   "High": "高",
+  "I have read and Accept the Agreement": null,
+  "I understand the risk": null,
   "IMPROPER USE OF THIS SOFTWARE COULD LEAD TO PERMANENT LOSS OF COIN.": "不正确使用本软件可能导致永久性的货币损失。",
   "IP address": "IP 地址",
   "IP address configured for manual Core.": "IP 地址已配置为手动核心。",
+  "IP/Ports allowed to mine to. Separate by <b>;</b> . Wildcards supported only in IP": null,
   "Ignore": "忽略",
   "Immature": "未成熟",
+  "Immature Balance": null,
   "Import": "导入",
   "Import custom theme": "导入自定义主题",
   "Import private key": "导入私钥",
-  "Incorrect password": "密码错误",
   "Install Module": "安装模块",
   "Install it later": "稍后安装",
   "Installing Module...": "正在安装模块...",
@@ -208,7 +212,10 @@
   "Label (optional)": "标签（可选）",
   "Language": "语言",
   "Last updated\n%{time}": "最近一次更新的时间 %{time}",
+  "License Agreement": null,
   "Light": "浅",
+  "Loading transaction details...": null,
+  "Loading transactions": null,
   "Local Time": "当地时间",
   "Log in now": "立即登录",
   "Log out": "退出",
@@ -233,6 +240,7 @@
   "Minimize the wallet when closing the window instead of closing it.": "关闭窗口而不关闭钱包时最小化钱包。",
   "Minimum amount of confirmations before a block is accepted. Local only.": "在块接受前确认的最小数量。仅本地。",
   "Minimum confirmations": "最小确认",
+  "Mining IP Whitelist": null,
   "Module Details": "模块详细信息",
   "Module Specifications version": "模块规格版本",
   "Module has been successfully installed": "模块已成功安装",
@@ -243,7 +251,6 @@
   "Module open source policy": "模块打开源代码策略",
   "Module type": "模块类型",
   "Modules": "模块化",
-  "More details": "更多详情",
   "Move NXS": "移动NXS",
   "Move NXS between accounts": "在帐户之间移动NXS",
   "Moving the database...": "正在移动数据库...",
@@ -283,18 +290,15 @@
   "Not logged in": "未登录",
   "Not provided": "未提供",
   "Notes": "注",
-  "OK": "确定",
   "Only modules which have valid open source repositories are allowed to be installed and run. You can disable this option to test run the modules that you're developing": "只有有效的开源仓库被允许安装并运行的模块。您可以禁用此选项以测试您正在开发的模块",
   "Open": "打开",
   "Orphan": "孤立",
   "Overview": "综述",
   "Overview Display": "概览显示",
   "Overwrite module?": "覆盖模块？",
-  "PENDING TRANSACTION": "待处理的交易",
   "Page": "页面",
   "Password": "密码",
   "Password cannot contain these characters:": "密码不能包含这些字符：",
-  "Password cannot contain these characters: - $ / & * | < >": "密码不能包含这些字符：- $ / / | < >",
   "Password cannot start or end with spaces": "密码不能以空格开始或结束",
   "Password configured for manual Core.": "为手动核心配置密码。",
   "Password has been changed.": "密码已更改。",
@@ -305,6 +309,7 @@
   "Past Week": "上周",
   "Past Year": "去年",
   "Paste": "粘贴",
+  "Pending": null,
   "Phone Number": "电话号码",
   "Phone number": "电话号码",
   "Please wait for Nexus Core to start.": "请等待 Nexus 核心开始。",
@@ -345,9 +350,8 @@
   "Restart Core?": "重启核心?",
   "Restarting Core...": "重新启动核心...",
   "Restarting Nexus Core...": "重新启动 Nexus 核心...",
-  "Rows": "行",
-  "SET TIMEOUT FOR LOGIN": "设置登录超时",
   "Sample Address": "示例地址",
+  "Save Settings": null,
   "Save changes": "保存修改",
   "Search address": "搜索地址",
   "Search contact": "搜索联系人",
@@ -365,19 +369,24 @@
   "Send": "发送",
   "Send NXS": "发送NXS",
   "Send To multiple recipients": "发送给多个收件人",
+  "Send all": null,
   "Send anonymous usage data": "发送匿名使用数据",
   "Send anonymous usage data to allow the Nexus developers to improve the wallet.": "发送匿名使用数据，以便 Nexus 开发者改善钱包。",
   "Send from": "发送自",
   "Send to": "发送到",
   "Send transaction?": "发送交易？",
   "Sent": "发送",
+  "Set timeout for login": null,
   "Settings": "设置",
+  "Settings Saving": null,
+  "Settings Unchanged": null,
+  "Show transactions chart": null,
   "Source code": "源代码",
   "Stake": "堆栈",
-  "Stake Balance": "堆栈余额",
   "Stake Difficulty": "堆栈难度",
   "Stake Rate": "稳定率",
   "Stake Weight": "堆积重量",
+  "Staking and mining rewards that need to get past 120 block-old to become available": null,
   "Start Nexus Core": "开始 Nexus 核心",
   "Stop Nexus Core": "停止 Nexus 核心",
   "Stopping Core...": "停止核心...",
@@ -385,7 +394,6 @@
   "Style": "样式",
   "Synchronized": "同步",
   "Synchronizing": "同步中",
-  "TX Number": "TX 号码",
   "The balance displayed might not be up-to-date since the wallet is not yet fully synchronized": "显示的余额可能不是最新的，因为钱包尚未完全同步",
   "The provided repository is not verified to be the real source code of this module": "提供的仓库没有被验证为本模块的真正源代码",
   "The wallet will now be refreshed for the new module to take effect": "钱包现在将被刷新，以便新模块生效",
@@ -404,19 +412,22 @@
   "This repository does not exist or is private": "此存储库不存在或是私有的",
   "This repository is not verified to be the real source code of this module": "此存储库未经验证是此模块的真正源代码",
   "This setting change will only take effect after Core is restarted. Do you want to restart the Core now?": "此设置更改只能在重新启动核心后生效。您想现在重新启动核心吗？",
+  "Time": null,
   "Time is required": "时间是必需的",
   "Time must be at least one hour in the future": "时间必须在今后至少一个小时",
   "Time span": "时间间隔",
   "Time zone": "时区",
-  "Time: ": "时间： ",
   "To account": "到账户",
   "Toggle Developer Tools": "切换开发者工具",
   "Toggle FullScreen": "切换全屏",
   "Toggle Module's Developer Tools": "切换模块开发者工具",
+  "Transaction ID": null,
   "Transaction details": "交易详情",
   "Transaction received": "已收到交易",
   "Transaction sent": "交易已发送",
   "Transactions": "交易记录（Transaction）",
+  "Transactions Details": null,
+  "Transactions chart": null,
   "Trust": "信任",
   "Trust Weight": "信任权重",
   "Trust transaction": "信托交易",
@@ -425,10 +436,8 @@
   "Turn module open source policy on?": "打开模块打开源代码？",
   "Turn policy off": "关闭策略",
   "Twinkling stars": "闪烁的星星",
-  "Type": "类型",
   "Unknown": "未知",
   "Unknown login status": "未知登录状态",
-  "Unlock until date/time must be at least an hour in the future": "解锁直到日期/时间必须在今后至少一个小时",
   "Unsupported file type": "不支持的文件类型",
   "Update available! Downloading...": "更新可用！下载中...",
   "Used to correct transaction/balance issues, scans over every block in the database. Could take up to 10 minutes.": "用于纠正事务/余额问题，扫描数据库中的每个块。最多可能需要10分钟。",
@@ -443,13 +452,17 @@
   "View private key for address": "查看私钥地址",
   "Visit repository": "访问仓库",
   "Volume": "音量",
+  "Waiting for 100% synchronization to start staking...": null,
+  "Waiting for average age of balance to exceed 72 hours to start staking...": null,
   "Wallet backed up": "钱包备份",
   "Wallet has been backed up": "钱包已备份",
   "Wallet has been encrypted.": "钱包已加密。",
   "Wallet is not encrypted": "钱包未加密",
   "Wallet is not staking": "钱包不是挂起",
   "Wallet is staking": "钱包正在挂起",
+  "Wallet password": null,
   "Wallet will be automatically refreshed for the change to take effect": "钱包将自动刷新，以便更改生效",
+  "Warning": null,
   "Yes": "是",
   "Yes, abort": "是，中止",
   "Yes, let's bootstrap it": "是的，让我们来引导吧",
@@ -459,5 +472,6 @@
   "Your computer does not support OPENGL 2.0": "您的计算机不支持OpenocungL 2.0",
   "Your wallet is not encrypted!": "您的钱包没有加密！",
   "Your wallet password": "您的钱包密码",
-  "or drag and drop it here": "或者拖放到这里"
+  "or drag and drop it here": "或者拖放到这里",
+  "rows": "行"
 }
