--- a/assets/translations/ja.json
+++ b/assets/translations/ja.json
@@ -35,6 +35,7 @@
   "Auto Update is not yet available on Mac, please update the wallet manually for the time being": null,
   "Auto update (Recommended)": null,
   "Automatically check for new versions and notify if a new version is available.": null,
+  "Avatar Mode": null,
   "BACKUP OFTEN AND KEEP ENCRYPTION KEY SAFE.": null,
   "Background": null,
   "Background Color": "パネルの背景色",
@@ -91,6 +92,7 @@
   "Copy to clipboard": null,
   "Core": "コア",
   "Core is in Manual Mode": null,
+  "Core needs to restart for these settings to take effect!": null,
   "Core output": "コア出力",
   "Core restarting": "コア再起動",
   "Core settings saved": "コア設定の保存",
@@ -120,6 +122,7 @@
   "Developer mode": "開発者モード",
   "Development mode enables advanced features to aid in development. After enabling the wallet must be closed and reopened to enable those features.": "開発モードでは、高度な機能を利用して開発を支援します。有効にしたら、ウォレットを閉じて再オープンして、それらの機能を有効にする必要があります",
   "Disable %{moduleName}?": null,
+  "Disabling Avatar will make the core use a separate change key": null,
   "Dismiss": null,
   "Display Test Transactions on the Transactions page": null,
   "Display name": null,
@@ -185,6 +188,7 @@
   "IMPROPER USE OF THIS SOFTWARE COULD LEAD TO PERMANENT LOSS OF COIN.": null,
   "IP address": "IPアドレス",
   "IP address configured for manual Core.": "手動デーモン用に設定されたIPアドレス",
+  "IP/Ports allowed to mine to. Separate by <b>;</b> . Wildcards supported only in IP": null,
   "Ignore": "無視する",
   "Immature": null,
   "Immature Balance": null,
@@ -236,6 +240,7 @@
   "Minimize the wallet when closing the window instead of closing it.": "ウィンドウを閉じずに閉じるときにウォレットを最小化する",
   "Minimum amount of confirmations before a block is accepted. Local only.": "Blank",
   "Minimum confirmations": "最低限の確認",
+  "Mining IP Whitelist": null,
   "Module Details": null,
   "Module Specifications version": null,
   "Module has been successfully installed": null,
@@ -346,6 +351,7 @@
   "Restarting Core...": null,
   "Restarting Nexus Core...": null,
   "Sample Address": null,
+  "Save Settings": null,
   "Save changes": null,
   "Search address": null,
   "Search contact": "検索連絡先",
@@ -372,6 +378,8 @@
   "Sent": "送信済み",
   "Set timeout for login": null,
   "Settings": "設定",
+  "Settings Saving": null,
+  "Settings Unchanged": null,
   "Show transactions chart": null,
   "Source code": null,
   "Stake": null,
@@ -421,7 +429,7 @@
   "Transactions Details": null,
   "Transactions chart": null,
   "Trust": "信頼",
-  "Trust Weight": "信頼の重み ",
+  "Trust Weight": "信頼の重み",
   "Trust transaction": "トラスト取引",
   "Turn auto update Off": null,
   "Turn module open source policy off?": null,
@@ -461,7 +469,7 @@
   "You are not logged in": null,
   "You need to log in to your wallet before sending transactions": null,
   "Your address book is empty": null,
-  "Your computer does not support OPENGL 2.0": "Your computer does not support OPENGL 2.0",
+  "Your computer does not support OPENGL 2.0": null,
   "Your wallet is not encrypted!": "あなたのウォレットは暗号化されていません！",
   "Your wallet password": null,
   "or drag and drop it here": null,
