--- a/assets/translations/ru.json
+++ b/assets/translations/ru.json
@@ -1,14 +1,14 @@
 {
-  "%{name}'s Address": null,
-  "%{name}'s Nexus address": null,
+  "%{name}'s Address": "%{name}'s Адрес",
+  "%{name}'s Nexus address": "%{name}'с Nexus адресом",
   "%{smart_count} address |||| %{smart_count} addresses": null,
   "(This will restart your Core)": null,
   "24hr Change": "24 часа смены",
   "A contact with the same name already exists.": null,
   "A module with the same directory name already exists": null,
-  "ACCOUNT": "ACCOUNT",
-  "ADDRESS": "ADDRESS",
-  "AMOUNT": "AMOUNT",
+  "ACCOUNT": null,
+  "ADDRESS": null,
+  "AMOUNT": null,
   "Abort": null,
   "About": null,
   "Account": "Счет",
@@ -22,12 +22,12 @@
   "Address cannot be empty": null,
   "Address has been copied to clipboard": null,
   "Address is required": null,
-  "All": "All",
+  "All": null,
   "All Accounts": "Все аккаунты",
   "All modules without open source verifications, possibly including your own under-development modules, will become invalid. Wallet must be refreshed for the change to take effect.": null,
   "Amount": "Количество",
   "An unknown error occurred": null,
-  "Application": "заявка",
+  "Application": "Заявка",
   "Are you sure you want to abort the process?": null,
   "Are you sure you want to disable auto update?": null,
   "Are you sure you want to log out?": null,
@@ -35,6 +35,7 @@
   "Auto Update is not yet available on Mac, please update the wallet manually for the time being": null,
   "Auto update (Recommended)": null,
   "Automatically check for new versions and notify if a new version is available.": null,
+  "Avatar Mode": null,
   "BACKUP OFTEN AND KEEP ENCRYPTION KEY SAFE.": null,
   "Background": null,
   "Background Color": "Цвет фона панели",
@@ -51,7 +52,7 @@
   "Bootstrap process has been aborted": null,
   "Browse": null,
   "Build Date": null,
-  "CATEGORY": "CATEGORY",
+  "CATEGORY": null,
   "Cancel": "Отмена",
   "Cannot bootstrap recent database in manual mode": null,
   "Cannot find module": null,
@@ -81,16 +82,17 @@
   "Confirmations": "Подтверждения",
   "Connecting to Nexus Core": "Загрузка демонов, пожалуйста, подождите",
   "Connecting to Nexus Core...": null,
-  "Connections": "связи",
+  "Connections": "Cвязи",
   "Console": "Консоль",
   "Contact has been updated": null,
   "Contact info": null,
   "Contact name": null,
-  "Copied to clipboard": "скопированный",
-  "Copy": "копия",
+  "Copied to clipboard": "Cкопированный",
+  "Copy": "Копия",
   "Copy to clipboard": null,
-  "Core": "ядро",
+  "Core": "Ядро",
   "Core is in Manual Mode": null,
+  "Core needs to restart for these settings to take effect!": null,
   "Core output": "Основной выход",
   "Core restarting": "Перезапуск ядра",
   "Core settings saved": "Сохраненные настройки ядра",
@@ -105,7 +107,7 @@
   "Danger Color": null,
   "Danger Color Accent": null,
   "Dark": null,
-  "Data directory configured for manual Core.": "Каталог данных, настроенный для ручного демона",
+  "Data directory configured for manual Core.": "Каталог данных, настроенный для ручного демона.",
   "Data directory is required": null,
   "Data directory name": "Название каталога данных",
   "Date": "Дата",
@@ -118,8 +120,9 @@
   "Deprecated Specification version": null,
   "Description": null,
   "Developer mode": "Режим разработчика",
-  "Development mode enables advanced features to aid in development. After enabling the wallet must be closed and reopened to enable those features.": "В режиме разработки расширенные функции помогают в разработке. После включения кошелька необходимо закрыть и снова открыть, чтобы включить эти функции",
+  "Development mode enables advanced features to aid in development. After enabling the wallet must be closed and reopened to enable those features.": "В режиме разработки расширенные функции помогают в разработке. После включения кошелька необходимо закрыть и снова открыть, чтобы включить эти функции.",
   "Disable %{moduleName}?": null,
+  "Disabling Avatar will make the core use a separate change key": null,
   "Dismiss": null,
   "Display Test Transactions on the Transactions page": null,
   "Display name": null,
@@ -135,11 +138,11 @@
   "Email": null,
   "Email address": null,
   "Enable %{moduleName}?": null,
-  "Enable manual Core mode if you are running the Nexus Core manually outside of the wallet.": "Включите режим ручного демона, если вы запускаете демона вручную за пределами кошелька",
+  "Enable manual Core mode if you are running the Nexus Core manually outside of the wallet.": "Включите режим ручного демона, если вы запускаете демона вручную за пределами кошелька.",
   "Enable mining": "Включить добычу",
   "Enable staking": "Включить размещение",
-  "Enable/Disable mining to the wallet.": "Включить / отключить добычу в кошельке",
-  "Enable/Disable staking on the wallet.": "Включить / отключить наложение кошелька",
+  "Enable/Disable mining to the wallet.": "Включить / отключить добычу в кошельке.",
+  "Enable/Disable staking on the wallet.": "Включить / отключить наложение кошелька.",
   "Encrypt and restart": "Шифрование и перезапуск",
   "Encrypt wallet": "Шифровать кошелек",
   "Enter a new account name or pick an existing account:": null,
@@ -165,26 +168,27 @@
   "Export contacts": "Экспорт контактов",
   "Export custom theme": null,
   "Fake Test Transactions": null,
-  "Fee": "плата",
+  "Fee": "Плата",
   "Fiat currency": "Валюта Fiat",
   "File": null,
   "Foreground Color": "Цвет текста",
   "From account": "Со счета",
   "Generate": null,
-  "Genesis": "Genesis",
+  "Genesis": null,
   "Genesis transaction": "Операция генезиса",
   "Getting next block...": "Получение следующего блока...",
   "Globe Arch Color": "глобусная арка Цвет",
   "Globe Color": "Цвет глобуса",
-  "Globe Pillar Color": "Цвет глобуса ",
+  "Globe Pillar Color": "Цвет глобуса",
   "Hash Difficulty": null,
   "Help": null,
-  "High": "высотой",
+  "High": "Высоко",
   "I have read and Accept the Agreement": null,
   "I understand the risk": null,
   "IMPROPER USE OF THIS SOFTWARE COULD LEAD TO PERMANENT LOSS OF COIN.": null,
-  "IP address": "Айпи адрес",
-  "IP address configured for manual Core.": "IP-адрес, настроенный для ручного демона",
+  "IP address": "IP-адрес",
+  "IP address configured for manual Core.": "IP-адрес, настроенный для ручного демона.",
+  "IP/Ports allowed to mine to. Separate by <b>;</b> . Wildcards supported only in IP": null,
   "Ignore": "Игнорировать",
   "Immature": null,
   "Immature Balance": null,
@@ -206,7 +210,7 @@
   "Keeping your wallet up-to-date is important for your security and will ensure that you get the best possible user experience.": null,
   "Key Management": null,
   "Label (optional)": null,
-  "Language": "язык",
+  "Language": "Язык",
   "Last updated\n%{time}": null,
   "License Agreement": null,
   "Light": null,
@@ -231,11 +235,12 @@
   "Market Data": "Информация о рынке",
   "Market Price": "Рыночная цена",
   "Message": "Сообщение",
-  "Min amount": "мне сумма",
+  "Min amount": "Мин сумма",
   "Minimize on close": "Свернуть",
-  "Minimize the wallet when closing the window instead of closing it.": "Минимизировать кошелек при закрытии окна",
-  "Minimum amount of confirmations before a block is accepted. Local only.": "Blank",
+  "Minimize the wallet when closing the window instead of closing it.": "Минимизировать кошелек при закрытии окна.",
+  "Minimum amount of confirmations before a block is accepted. Local only.": "Минимальное количество подтверждений до принятия блока. Только локально.",
   "Minimum confirmations": "Минимальные подтверждения",
+  "Mining IP Whitelist": null,
   "Module Details": null,
   "Module Specifications version": null,
   "Module has been successfully installed": null,
@@ -257,16 +262,16 @@
   "NXS Amount": "NXS Количество",
   "NXS addresses": null,
   "NXS moved successfully": null,
-  "Name": "имя",
+  "Name": "Имя",
   "Name is required.": null,
   "New address": null,
   "New address has been created": null,
   "New contact": null,
   "New contact has been added to address book": null,
-  "New password": "новый пароль:",
+  "New password": "Новый пароль",
   "New wallet version %{version} - Ready to install!": null,
   "New wallet version %{version} available. Downloading...": null,
-  "Next": "Next",
+  "Next": null,
   "Nexus Addresses format": null,
   "Nexus Core Version": null,
   "Nexus Core is not connected": "Демон не загружен",
@@ -274,7 +279,7 @@
   "Nexus Git Repository": null,
   "Nexus Wallet Guide": null,
   "Nexus Website": null,
-  "No": "нет",
+  "No": "Нет",
   "No Rows Found": "Нет строк найдено",
   "No accounts selected": null,
   "No information": null,
@@ -286,32 +291,32 @@
   "Not provided": null,
   "Notes": "Заметки",
   "Only modules which have valid open source repositories are allowed to be installed and run. You can disable this option to test run the modules that you're developing": null,
-  "Open": "открыто",
+  "Open": "Открыть",
   "Orphan": null,
-  "Overview": "обзор",
+  "Overview": "Обзор",
   "Overview Display": null,
   "Overwrite module?": null,
-  "Page": "страница",
-  "Password": "пароль",
+  "Page": "Страница",
+  "Password": "Пароль",
   "Password cannot contain these characters:": null,
   "Password cannot start or end with spaces": null,
-  "Password configured for manual Core.": "Пароль, настроенный для ручного демона",
-  "Password has been changed.": "пароль был изменен",
-  "Password is required": "необходим пароль",
+  "Password configured for manual Core.": "Пароль, настроенный для ручного демона.",
+  "Password has been changed.": "Ваш пароль был изменён.",
+  "Password is required": "Необходимо указать пароль",
   "Password must be at least 8 characters": null,
   "Passwords do not match": "Пароли не совпадают",
-  "Past Month": "Past Month",
-  "Past Week": "Past Week",
-  "Past Year": "Past Year",
+  "Past Month": null,
+  "Past Week": null,
+  "Past Year": null,
   "Paste": "Вставить",
   "Pending": null,
   "Phone Number": "Номер телефона",
   "Phone number": null,
   "Please wait for Nexus Core to start.": null,
-  "Port": "порт",
-  "Port configured for manual Core.": "Порт настроен для ручного демона",
-  "Previous": "Previous",
-  "Previous password": "предыдущий пароль",
+  "Port": "Порт",
+  "Port configured for manual Core.": "Порт настроен для ручного демона.",
+  "Previous": null,
+  "Previous password": "Предыдущий пароль",
   "Price": "Цена",
   "Price Change": "Изменение цены",
   "Primary Color": null,
@@ -329,12 +334,12 @@
   "Receive": "Получать",
   "Recent database has been successfully bootstrapped": null,
   "Recipient address": null,
-  "Refresh": "обновление",
-  "Refreshing market data...": "Refreshing Market Data",
+  "Refresh": "Обновить",
+  "Refreshing market data...": "Refreshing Market Data...",
   "Remove address": null,
   "Remove recipient": null,
   "Render globe": "Показать глобус",
-  "Render the globe on the Overview page.": "Отобразить глобус на странице обзора",
+  "Render the globe on the Overview page.": "Отобразить глобус на странице обзора.",
   "Rescan wallet": null,
   "Rescanned successfully": null,
   "Rescanning Wallet...": null,
@@ -346,6 +351,7 @@
   "Restarting Core...": null,
   "Restarting Nexus Core...": null,
   "Sample Address": null,
+  "Save Settings": null,
   "Save changes": null,
   "Search address": null,
   "Search contact": "Поиск контактов",
@@ -360,18 +366,20 @@
   "Select module archive file": null,
   "Select module directory": null,
   "Select module's <file>archive file</file> or <dir>directory</dir>": null,
-  "Send": "послать",
-  "Send NXS": "послать NXS",
+  "Send": "Послать",
+  "Send NXS": "Послать NXS",
   "Send To multiple recipients": null,
   "Send all": null,
   "Send anonymous usage data": "Отправить анонимные данные использования",
-  "Send anonymous usage data to allow the Nexus developers to improve the wallet.": "Отправлять анонимные данные использования, чтобы разработчики Nexus могли улучшить кошелек",
+  "Send anonymous usage data to allow the Nexus developers to improve the wallet.": "Отправлять анонимные данные использования, чтобы разработчики Nexus могли улучшить кошелек.",
   "Send from": null,
   "Send to": null,
   "Send transaction?": "Отправить транзакцию?",
-  "Sent": "Sent",
+  "Sent": null,
   "Set timeout for login": null,
-  "Settings": "настройки",
+  "Settings": "Настройки",
+  "Settings Saving": null,
+  "Settings Unchanged": null,
   "Show transactions chart": null,
   "Source code": null,
   "Stake": null,
@@ -384,7 +392,7 @@
   "Stopping Core...": null,
   "Stopping Nexus Core...": null,
   "Style": "Стиль",
-  "Synchronized": "синхронизируется",
+  "Synchronized": "Синхронизирован",
   "Synchronizing": "Синхронизации",
   "The balance displayed might not be up-to-date since the wallet is not yet fully synchronized": null,
   "The provided repository is not verified to be the real source code of this module": null,
@@ -417,7 +425,7 @@
   "Transaction details": "Детали транзакции",
   "Transaction received": "Полученная транзакция",
   "Transaction sent": "Отправленная транзакция",
-  "Transactions": "операции",
+  "Transactions": "Операций",
   "Transactions Details": null,
   "Transactions chart": null,
   "Trust": "Доверять",
@@ -433,35 +441,35 @@
   "Unsupported file type": null,
   "Update available! Downloading...": null,
   "Used to correct transaction/balance issues, scans over every block in the database. Could take up to 10 minutes.": null,
-  "Username": "имя пользователя",
-  "Username configured for manual Core.": "Имя пользователя, настроенное для ручного демона",
+  "Username": "Имя пользователя",
+  "Username configured for manual Core.": "Имя пользователя, настроенное для ручного демона.",
   "Verbose level": "Подробный уровень",
-  "Verbose level for logs.": "Подробный уровень для журналов",
+  "Verbose level for logs.": "Подробный уровень для журналов.",
   "Version": null,
   "View": null,
   "View Backups": null,
   "View private key": "Посмотреть закрытый ключ",
   "View private key for address": "Просмотр закрытого ключа для адреса",
   "Visit repository": null,
-  "Volume": "объем",
+  "Volume": "Объём",
   "Waiting for 100% synchronization to start staking...": null,
   "Waiting for average age of balance to exceed 72 hours to start staking...": null,
   "Wallet backed up": "Кошелек с резервными копиями",
   "Wallet has been backed up": null,
-  "Wallet has been encrypted.": "Кошелек зашифрован",
+  "Wallet has been encrypted.": "Кошелек зашифрован.",
   "Wallet is not encrypted": null,
   "Wallet is not staking": null,
   "Wallet is staking": null,
   "Wallet password": null,
   "Wallet will be automatically refreshed for the change to take effect": null,
   "Warning": null,
-  "Yes": "да",
+  "Yes": "Да",
   "Yes, abort": null,
   "Yes, let's bootstrap it": null,
   "You are not logged in": null,
   "You need to log in to your wallet before sending transactions": null,
   "Your address book is empty": null,
-  "Your computer does not support OPENGL 2.0": "Your computer does not support OPENGL 2.0",
+  "Your computer does not support OPENGL 2.0": null,
   "Your wallet is not encrypted!": "Ваш кошелек не зашифрован!",
   "Your wallet password": null,
   "or drag and drop it here": null,
